--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -2665,6 +2665,394 @@ console.log(result);
 
 ----
 
+## 31. 下一个排列
+
+整数数组的一个 排列  就是将其所有成员以序列或线性顺序排列。
+
+例如，arr = [1,2,3] ，以下这些都可以视作 arr 的排列：[1,2,3]、[1,3,2]、[3,1,2]、[2,3,1] 。
+整数数组的 下一个排列 是指其整数的下一个字典序更大的排列。更正式地，如果数组的所有排列根据其字典顺序从小到大排列在一个容器中，那么数组的 下一个排列 就是在这个有序容器中排在它后面的那个排列。如果不存在下一个更大的排列，那么这个数组必须重排为字典序最小的排列（即，其元素按升序排列）。
+
+例如，arr = [1,2,3] 的下一个排列是 [1,3,2] 。
+类似地，arr = [2,3,1] 的下一个排列是 [3,1,2] 。
+而 arr = [3,2,1] 的下一个排列是 [1,2,3] ，因为 [3,2,1] 不存在一个字典序更大的排列。
+给你一个整数数组 nums ，找出 nums 的下一个排列。
+
+必须 原地 修改，只允许使用额外常数空间。
+
+ **两遍扫描**
+思路及解法
+
+注意到下一个排列总是比当前排列要大，除非该排列已经是最大的排列。我们希望找到一种方法，能够找到一个大于当前序列的新序列，且变大的幅度尽可能小。具体地：
+
+1. 我们需要将一个**左边的「较小数」**与一个**右边的「较大数」交换**，以能够让当前排列变大，从而得到下一个排列。
+
+2. 同时我们要让这个「较小数」尽量靠右，而「较大数」尽可能小。当交换完成后，「较大数」右边的数需要按照升序重新排列。这样可以在保证新排列大于原来排列的情况下，使变大的幅度尽可能小。
+
+
+以排列` [4,5,2,6,3,1]`为例：
+
+- 我们能找到的符合条件的一对「较小数」与「较大数」的组合为 2 与 3，满足「较小数」尽量靠右，而「较大数」尽可能小。
+
+- 当我们完成交换后排列变为`[4,5,3,6,2,1]`，此时我们可以重排「较小数」右边的序列，序列变为` [4,5,3,1,2,6]`。
+
+
+具体地，我们这样描述该算法，对于长度为 n 的排列 a：
+
+1. 首先从后向前查找第一个顺序对 (i,i+1)，满足 a[i] < a[i+1]。这样「较小数」即为 a[i]。此时 [i+1,n) 必然是下降序列。
+
+2. 如果找到了顺序对，那么在区间 [i+1,n)中从后向前查找第一个元素 j 满足 a[i] < a[j]。这样「较大数」即为a[j]。
+
+3. 交换 a[i] 与 a[j]，**此时可以证明区间 [i+1,n) 必为降序**。我们可以直接使用双指针反转区间 [i+1,n) 使其变为升序，而无需对该区间进行排序。
+
+
+如果在步骤 1 找不到顺序对，说明当前序列已经是一个降序序列，即最大的序列，我们直接跳过步骤 2 执行步骤 3，即可得到最小的升序序列。
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {void} Do not return anything, modify nums in-place instead.
+ */
+var nextPermutation = function(nums) {
+    const n = nums.length;
+    let i = n - 2;
+    // 找到的符合条件的一对「左边的较小数」与「右边的较大数」
+    while (i >= 0 && nums[i] >= nums[i + 1]) {
+        i--;
+    }
+    if (i >= 0) {
+        let j = n - 1;
+        while (j >= 0 && nums[i] >= nums[j]) {
+            j--;
+        }
+        swap(nums, i, j);
+    }
+    reverse(nums, i + 1, n - 1);
+    return nums;
+};
+
+const swap = (nums, i, j) => {
+    [nums[i], nums[j]] = [nums[j], nums[i]];
+}
+
+const reverse = (nums, left, right) => {
+    while (left < right) {
+        [nums[left], nums[right]] = [nums[right], nums[left]];
+        left++;
+        right--;
+    }
+}
+
+let nums = [4,5,6,7,0,1,2];
+let result = nextPermutation(nums);
+console.log(result);
+```
+
+
+
+----
+
+## 32. 最长有效括号
+
+给你一个只包含 `'('` 和 `')'` 的字符串，找出最长有效（格式正确且连续）括号子串的长度。
+
+ **提示：**
+
+- `0 <= s.length <= 3 * 104`
+- `s[i]` 为 `'('` 或 `')'`
+
+
+
+**动态规划**
+
+![有效括号子串动态规划](E:\pogject\学习笔记\image\niuke\有效括号子串动态规划.png)
+
+
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var longestValidParentheses = function(s) {
+  if (s.length < 2) {
+    return 0;
+  }
+  const n = s.length;
+  let ans = 0;
+  const dp = new Array(n).fill(0);
+  for (let i = 1; i < n; i++) {
+    if (s[i] === ")") {
+      if (s[i - 1] === "(") {
+        dp[i] = (i >= 2 ? dp[i - 2] : 0 ) + 2;
+      } else if (i - dp[i - 1] > 0 && s[i - dp[i - 1] - 1] === "(") {
+        dp[i] = dp[i - 1] + ((i - dp[i - 1]) >= 2 ? dp[i - dp[i - 1] - 2] : 0) + 2;
+      }
+      ans = Math.max(ans, dp[i]);
+    }
+  }
+  return ans;
+};
+
+let s = ")()())";
+console.log(longestValidParentheses(s));
+```
+
+
+
+**栈**
+
+撇开方法一提及的动态规划方法，相信大多数人对于这题的第一直觉是找到每个可能的子串后判断它的有效性，但这样的时间复杂度会达到 O(n^3)，无法通过所有测试用例。但是通过栈，我们可以在遍历给定字符串的过程中去判断到目前为止扫描的子串的有效性，同时能得到最长有效括号的长度。
+
+具体做法是我们始终保持栈底元素为当前已经遍历过的元素中「**最后一个没有被匹配的右括号的下标**」，这样的做法主要是考虑了边界条件的处理，栈里其他元素维护左括号的下标：
+
+- 对于遇到的每个 ‘(’ ，我们将它的下标放入栈中
+
+- 对于遇到的每个 ‘)’ ，我们先弹出栈顶元素表示匹配了当前右括号：
+- - 如果栈为空，说明当前的右括号为没有被匹配的右括号，我们将其下标放入栈中来更新我们之前提到的「最后一个没有被匹配的右括号的下标」
+  - 如果栈不为空，当前右括号的下标减去栈顶元素即为「以该右括号为结尾的最长有效括号的长度」
+
+我们从前往后遍历字符串并更新答案即可。
+
+需要注意的是，**如果一开始栈为空，第一个字符为左括号的时候我们会将其放入栈中**，这样就不满足提及的「最后一个没有被匹配的右括号的下标」，**为了保持统一，我们在一开始的时候往栈中放入一个值为 -1 的元素**。
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var longestValidParentheses = function(s) {
+  if (s.length < 2) {
+    return 0;
+  }
+  const n = s.length;
+  let ans = 0;
+  const stack = [-1];
+    
+  for (let i = 0; i < n; i++) {
+    if (s[i] === "(") {
+      stack.push(i);
+    } else {
+      stack.pop();
+      if (stack.length === 0) {
+        stack.push(i);
+      } else {
+        ans = Math.max(ans, i - stack[stack.length - 1]);
+      }
+    }
+  }
+  return ans;
+};
+
+let s = ")()())";
+console.log(longestValidParentheses(s));
+```
+
+
+
+**不需要额外的空间**
+
+在此方法中，我们利用两个计数器 left 和right 。
+
+首先，我们从左到右遍历字符串，对于遇到的每个‘(’，我们增加left 计数器，对于遇到的每个‘)’ ，我们增加 right 计数器。**每当 left 计数器与 right 计数器相等时，我们计算当前有效字符串的长度**，并且记录目前为止找到的最长子字符串。**当right 计数器比 left 计数器大时，我们将left 和 right 计数器同时变回 0。**
+
+这样的做法贪心地考虑了以当前字符下标结尾的有效括号长度，每次当右括号数量多于左括号数量的时候之前的字符我们都扔掉不再考虑，重新从下一个字符开始计算，但这样会漏掉一种情况，就是遍历的时候左括号的数量始终大于右括号的数量，即 (() ，这种时候最长有效括号是求不出来的。
+
+解决的方法也很简单，我们只需要从右往左遍历用类似的方法计算即可，只是这个时候**判断条件反了过来**：
+
+当 left 计数器比 right 计数器大时，我们将 left 和 right 计数器同时变回 0
+当 left 计数器与 right 计数器相等时，我们计算当前有效字符串的长度，并且记录目前为止找到的最长子字符串
+这样我们就能涵盖所有情况从而求解出答案。
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var longestValidParentheses = function(s) {
+  if (s.length < 2) {
+    return 0;
+  }
+  const n = s.length;
+  let ans = 0;
+  let left = 0, right = 0;
+
+  for (let i = 0; i < n; i++) {
+    if (s[i] === "(") {
+      left++;
+    } else {
+      right++;
+    }
+    if (left === right) {
+      ans = Math.max(ans, 2 * right);
+    } else if (right > left) {
+      left = right = 0;
+    }
+  }
+  left = right = 0;
+  for (let i = n - 1; i > 0; i--) {
+    if (s[i] === "(") {
+      left++;
+    } else {
+      right++;
+    }
+    if (left === right) {
+      ans = Math.max(ans, 2 * left);
+    } else if (right < left) {
+      left = right = 0;
+    }
+  }
+  return ans;
+};
+
+let s = ")()())";
+console.log(longestValidParentheses(s));
+```
+
+- 时间复杂度：*O*(*n*)，其中 n*n* 为字符串长度。我们只要正反遍历两边字符串即可。
+- 空间复杂度： *O*(1)。我们只需要常数空间存放若干变量。
+
+
+
+----
+
+## 33. 搜索旋转排序数组
+
+整数数组 nums 按升序排列，数组中的值 互不相同 。
+
+在传递给函数之前，nums 在预先未知的某个下标 k（0 <= k < nums.length）上进行了 旋转，使数组变为 [nums[k], nums[k+1], ..., nums[n-1], nums[0], nums[1], ..., nums[k-1]]（下标 从 0 开始 计数）。例如， [0,1,2,4,5,6,7] 在下标 3 处经旋转后可能变为 [4,5,6,7,0,1,2] 。
+
+给你 旋转后 的数组 nums 和一个整数 target ，如果 nums 中存在这个目标值 target ，则返回它的下标，否则返回 -1 。
+
+你必须设计一个时间复杂度为 O(log n) 的算法解决此问题。
+
+提示：
+
+1 <= nums.length <= 5000
+-104 <= nums[i] <= 104
+nums 中的每个值都 独一无二
+题目数据保证 nums 在预先未知的某个下标上进行了旋转
+-104 <= target <= 104
+
+
+
+二分查找
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} target
+ * @return {number}
+ */
+var search = function(nums, target) {
+    const n = nums.length;
+    if (n === 0) {
+        return -1;
+    }
+    if (n === 1) {
+        return nums[0] === target ? 0 : -1;
+    }
+
+    let left = 0, right = nums.length - 1;
+    while (left <= right) {
+        const mid = left + Math.floor((right - left) / 2);
+        if (nums[mid] == target) {
+            return mid;
+        }
+        if (nums[0] <= nums[mid]) {
+            //初始值小于等于中间值，前面部分连续
+            if (nums[0] <= target && target < nums[mid]) {
+                right = mid - 1;
+            } else {
+                left = mid + 1;
+            }
+        } else {
+            if (nums[mid] < target && target <= nums[n - 1]) {
+                left = mid + 1;
+            } else {
+                right = mid - 1;
+            }
+        }
+    }
+    return -1;
+};
+
+let nums = [4,5,6,7,0,1,2], target = 0;
+let result = search(nums, target);
+console.log(result);
+```
+
+
+
+----
+
+## 34. 在排序数组中查找元素的第一个和最后一个位置
+
+给你一个按照非递减顺序排列的整数数组 nums，和一个目标值 target。请你找出给定目标值在数组中的开始位置和结束位置。
+
+如果数组中不存在目标值 target，返回 [-1, -1]。
+
+你必须设计并实现时间复杂度为 O(log n) 的算法解决此问题。
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} target
+ * @return {number[]}
+ */
+var searchRange = function(nums, target) {
+    let left = 0, right = nums.length - 1;
+    const n = nums.length;
+    while (left <= right) {
+        const mid = (left + right) >> 1;
+        if (nums[mid] === target) {
+            left = mid > 0 ? binarySearch(nums, 0, mid - 1, target, true) : 0;
+            right = mid < n - 1 ? binarySearch(nums, mid + 1, n - 1, target, false) : n - 1;
+            if (nums[left] !== target) {
+                left += 1;
+            }
+            if (nums[right] !== target) {
+                right -= 1;
+            }
+            return [left, right];
+        } else if (nums[mid] < target) {
+            left = mid + 1;
+        } else {
+            right = mid - 1;
+        }
+    }
+    return [-1, -1];
+};
+
+const binarySearch = (nums, left, right, target, flag) => {
+    const n = nums.length;
+    while (left <= right) {
+        const mid = (left + right) >> 1;
+        if (nums[mid] === target) {
+            if (flag) {
+                return binarySearch(nums, 0, mid - 1, target, true);;
+            } else {
+                return binarySearch(nums, mid + 1, n - 1, target, false);
+            }
+        } else if (nums[mid] < target) {
+            left = mid + 1;
+        } else {
+            right = mid - 1;
+        }
+    }
+    return left;
+}
+
+let nums = [5,7,7,8,8,10], target = 8;
+let result = searchRange(nums, target);
+console.log(result);
+```
+
+
+
+
+
+----
+
 ## 35. 搜索插入位置
 
 给定一个排序数组和一个目标值，在数组中找到目标值，并返回其索引。如果目标值不存在于数组中，返回它将会被按顺序插入的位置。
@@ -2740,6 +3128,196 @@ console.log(result);
 
 
 ---
+## 36. 有效的数独
+
+请你判断一个 9 x 9 的数独是否有效。只需要 根据以下规则 ，验证已经填入的数字是否有效即可。
+
+数字 1-9 在每一行只能出现一次。
+数字 1-9 在每一列只能出现一次。
+数字 1-9 在每一个以粗实线分隔的 3x3 宫内只能出现一次。（请参考示例图）
+
+
+注意：
+
+一个有效的数独（部分已被填充）不一定是可解的。
+只需要根据以上规则，验证已经填入的数字是否有效即可。
+空白格用 '.' 表示。
+
+
+
+可以**使用哈希表记录每一行、每一列和每一个小九宫格中，每个数字出现的次数**。只需要遍历数独一次，在遍历的过程中更新哈希表中的计数，并判断是否满足有效的数独的条件即可。
+
+如果遍历结束之后没有出现计数大于 11 的情况，则符合有效的数独的条件，返回 \text{true}true。
+
+```js
+/**
+ * @param {character[][]} board
+ * @return {boolean}
+ */
+var isValidSudoku = function(board) {
+    const rows = new Array(9).fill(0).map(() => new Array(9).fill(0));
+    const columns = new Array(9).fill(0).map(() => new Array(9).fill(0));
+    const subboxes = new Array(3).fill(0).map(() => new Array(3).fill(0).map(() => new Array(9).fill(0)));
+
+    for (let i = 0; i < 9; i++) {
+        for (let j = 0; j < 9; j++) {
+            const c = board[i][j];
+            if (c !== ".") {
+                const index = Number(c) - 1;
+                rows[i][index]++;
+                columns[j][index]++;
+                subboxes[Math.floor(i / 3)][Math.floor(j / 3)][index]++;
+                if (rows[i][index] > 1 || columns[j][index] > 1 || subboxes[Math.floor(i / 3)][Math.floor(j / 3)][index] > 1) {
+                    return false;
+                }
+            }
+        }
+    }
+    return true;
+};
+
+
+let board = 
+    [["5","3",".",".","7",".",".",".","."]
+    ,["6",".",".","1","9","5",".",".","."]
+    ,[".","9","8",".",".",".",".","6","."]
+    ,["8",".",".",".","6",".",".",".","3"]
+    ,["4",".",".","8",".","3",".",".","1"]
+    ,["7",".",".",".","2",".",".",".","6"]
+    ,[".","6",".",".",".",".","2","8","."]
+    ,[".",".",".","4","1","9",".",".","5"]
+    ,[".",".",".",".","8",".",".","7","9"]];
+
+let result = isValidSudoku(board);
+console.log(result);
+```
+
+
+
+----
+
+## 37. 解数独
+
+编写一个程序，通过填充空格来解决数独问题。
+
+数独的解法需 遵循如下规则：
+
+数字 1-9 在每一行只能出现一次。
+数字 1-9 在每一列只能出现一次。
+数字 1-9 在每一个以粗实线分隔的 3x3 宫内只能出现一次。（请参考示例图）
+数独部分空格内已填入了数字，空白格用 '.' 表示。
+
+
+
+```
+
+```
+
+
+
+----
+
+## 38. 外观数列
+
+给定一个正整数 n ，输出外观数列的第 n 项。
+
+「外观数列」是一个整数序列，从数字 1 开始，序列中的每一项都是对前一项的描述。
+
+你可以将其视作是由递归公式定义的数字字符串序列：
+
+countAndSay(1) = "1"
+countAndSay(n) 是对 countAndSay(n-1) 的描述，然后转换成另一个数字字符串。
+
+```js
+/**
+ * @param {number} n
+ * @return {string}
+ */
+var countAndSay = function(n) {
+    if (n===1) { return ""+1;}
+    let oldStr="1";
+    let newStr="";
+    for (let i=2;i<=n;i++){
+        let count=1;
+        let num=oldStr[0];
+        let j=1;
+        while(j<oldStr.length){
+            if (num===oldStr[j]) {
+                count+=1;
+                j++;
+            }else{
+                newStr+=""+count+""+num;
+                count=1;
+                num=oldStr[j];
+                j++;
+            }
+        }
+        newStr+=""+count+""+num;
+        oldStr=newStr;
+        newStr="";
+        
+    }
+    return oldStr;
+};
+```
+
+
+
+
+
+```js
+var countAndSay = function(n) {
+    let str = "1";
+    for (let i = 2; i <= n; ++i) {
+        const sb = [];
+        let start = 0;
+        let pos = 0;
+
+        while (pos < str.length) {
+            while (pos < str.length && str[pos] === str[start]) {
+                pos++;
+            }
+            sb.push('' + (pos - start) + str[start]);
+            start = pos;
+        }
+        str = sb.join('');
+    }
+    
+    return str;
+};
+
+```
+
+
+
+----
+
+## 39. 组合总和
+
+给你一个 无重复元素 的整数数组 candidates 和一个目标整数 target ，找出 candidates 中可以使数字和为目标数 target 的 所有 不同组合 ，并以列表形式返回。你可以按 任意顺序 返回这些组合。
+
+candidates 中的 同一个 数字可以 无限制重复被选取 。如果至少一个数字的被选数量不同，则两种组合是不同的。 
+
+对于给定的输入，保证和为 target 的不同组合数少于 150 个。
+
+
+
+```
+
+```
+
+
+
+
+
+
+
+----
+
+
+
+----
+
 ## 41. 缺失的第一个正数
 
 给你一个未排序的整数数组 `nums` ，请你找出其中没有出现的最小的正整数。
@@ -17960,6 +18538,161 @@ let groupSize = 10;
 
 console.log(isNStraightHand(hand,groupSize));
 ```
+
+
+
+----
+
+## 854. 相似度为 K 的字符串
+
+对于某些非负整数 k ，如果交换 s1 中两个字母的位置恰好 k 次，能够使结果字符串等于 s2 ，则认为字符串 s1 和 s2 的 相似度为 k 。
+
+给你两个字母异位词 s1 和 s2 ，返回 s1 和 s2 的相似度 k 的最小值。
+
+提示：
+
+1 <= s1.length <= 20
+s2.length == s1.length
+s1 和 s2  只包含集合 {'a', 'b', 'c', 'd', 'e', 'f'} 中的小写字母
+s2 是 s1 的一个字母异位词
+
+**广度优先搜索**
+
+![相似度为 K 的字符串1](E:\pogject\学习笔记\image\leetcode\相似度为 K 的字符串1.png)
+
+```js
+/**
+ * @param {string} s1
+ * @param {string} s2
+ * @return {number}
+ */
+var kSimilarity = function(s1, s2) {
+    const n = s1.length;
+    const queue = [];
+    const visit = new Set();
+    queue.push([s1, 0]);
+    visit.add(s1);
+
+    let step = 0;
+    while (queue.length) {
+        const sz = queue.length;
+        for (let i = 0; i < sz; i++) {
+            let [cur, pos] = queue.shift();
+            if (cur === s2) {
+                return step;
+            }
+            while (pos < n && cur[pos] === s2[pos]) {
+                pos++;
+            }
+            for (let j = pos + 1; j < n; j++) {
+                if (s2[j] === cur[j]) {
+                    continue;
+                }
+                if (s2[pos] === cur[j]) {
+                    const next = swap(cur, pos, j);
+                    if (!visit.has(next)) {
+                        visit.add(next);
+                        queue.push([next, pos + 1]);
+                    }
+                }
+            }
+        }
+        step++;
+    }
+    return step;
+};
+
+const swap = (cur, i, j) => {
+    const arr = [...cur];
+    [arr[i], arr[j]] = [arr[j], arr[i]];
+    return arr.join("");
+}
+
+let s1 = "abc", s2 = "bca";
+let result = kSimilarity(s1, s2);
+console.log(result);
+```
+
+
+
+**深度优先搜索**
+
+```js
+/**
+ * @param {string} s1
+ * @param {string} s2
+ * @return {number}
+ */
+var kSimilarity = function(s1, s2) {
+    const n = s1.length;
+    let str1 = "", str2 = "";
+    for (let i = 0; i < n; i++) {
+        if (s1[i] !== s2[i]) {
+            str1 += s1[i];
+            str2 += s2[i];
+        }
+    }
+    if (str1.length === 0) {
+        return 0;
+    }
+    let ans = str1.length - 1;
+
+    const dfs = (pos, cost, len, str1, str2) => {
+        if (cost > ans) {
+            return;
+        }
+        while (pos < str1.length && str1[pos] === str2[pos]) {
+            pos++;
+        }
+        if (pos === str1.length) {
+            ans = Math.min(ans, cost);
+            return;
+        }
+        /* 当前状态的交换次数下限大于等于当前的最小交换次数 */   
+        if (cost + minSwap(str1, str2, pos) >= ans) {
+            return;
+        }
+        for (let i = pos + 1; i < str1.length; i++) {
+            if (str1[i] === str2[pos]) {
+                const str1Next = swap(str1, i, pos);
+                dfs(pos + 1, cost + 1, len, str1Next, str2);
+            }
+        }
+    }
+
+    dfs(0, 0, str1.length, str1, str2);
+    return ans;
+};
+const minSwap = (s1, s2, pos) => {{
+    let tot = 0;
+    for (let i = pos; i < s1.length; i++) {
+        tot += s1[i] !== s2[i] ? 1 : 0;
+    }
+    return Math.floor((tot + 1) / 2);
+}}
+
+const swap = (cur, i, j) => {
+    const arr = [...cur];
+    [arr[i], arr[j]] = [arr[j], arr[i]];
+    return arr.join("");
+}
+
+let s1 = "abc", s2 = "bca";
+let result = kSimilarity(s1, s2);
+console.log(result);
+```
+
+
+
+
+
+----
+
+
+
+
+
+
 
 
 ---
