--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -7449,7 +7449,9 @@ console.log(isMatch(s, p));
 
 #### 动态规划
 
-![有效括号子串动态规划](D:\project\学习笔记\image\niuke\有效括号子串动态规划.png)
+![有效括号子串动态规划](E:\pogject\学习笔记\image\niuke\有效括号子串动态规划.png)
+
+
 
 ```js
 /**
