--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -3913,7 +3913,7 @@ console.log(result);
 - `0 <= strs[i].length <= 100`
 - `strs[i]` 仅包含小写字母
 
-
+**排序**
 
 ```js
 /**
@@ -3937,6 +3937,23 @@ var groupAnagrams = function(strs) {
 let strs = ["eat", "tea", "tan", "ate", "nat", "bat"];
 let result = groupAnagrams(strs);
 console.log(result);
+```
+
+**计数**
+
+```js
+var groupAnagrams = function(strs) {
+    const map = new Object();
+    for (let s of strs) {
+        const count = new Array(26).fill(0);
+        for (let c of s) {
+            count[c.charCodeAt() - 'a'.charCodeAt()]++;
+        }
+        map[count] ? map[count].push(s) : map[count] = [s];
+    }
+    return Object.values(map);
+};
+
 ```
 
 
@@ -4007,6 +4024,12 @@ console.log(myPow(2, -2147483648));
 
 ----
 
+
+
+
+
+----
+
 ## 53. 最大子数组和
 
 给你一个整数数组 nums ，请你找出一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。
@@ -4048,6 +4071,57 @@ console.log(result);
 ```
 
 **方法二：分治**
+
+
+
+------
+
+## 55. 跳跃游戏
+
+给定一个非负整数数组 `nums` ，你最初位于数组的 **第一个下标** 。
+
+数组中的每个元素代表你在该位置可以跳跃的最大长度。
+
+判断你是否能够到达最后一个下标。
+
+
+
+我们可以用贪心的方法解决这个问题。
+
+这样以来，我们依次遍历数组中的每一个位置，并实时维护 最远可以到达的位置。对于当前遍历到的位置 xx，如果它在 最远可以到达的位置 的范围内，那么我们就可以从起点通过若干次跳跃到达该位置，因此我们可以用 x + \textit{nums}[x]x+nums[x] 更新 最远可以到达的位置。
+
+在遍历的过程中，如果 最远可以到达的位置 大于等于数组中的最后一个位置，那就说明最后一个位置可达，我们就可以直接返回 True 作为答案。反之，如果在遍历结束后，最后一个位置仍然不可达，我们就返回 False 作为答案。
+
+
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {boolean}
+ */
+var canJump = function(nums) {
+    const n = nums.length;
+    let rightmost = 0;
+    for (let i = 0; i < n; i++) {
+        if (i <= rightmost) {
+            rightmost = Math.max(rightmost, i + nums[i]);
+            if (rightmost >= n - 1) {
+                return true;
+            }
+        }
+    }
+    return false;
+};
+
+
+let nums = [2,3,1,1,4];
+let result = canJump(nums);
+console.log(result);
+```
+
+
+
+
 
 
 
@@ -4093,6 +4167,74 @@ console.log(result);
 
 
 ---
+## 59. 螺旋矩阵 II
+
+给你一个正整数 `n` ，生成一个包含 `1` 到 `n2` 所有元素，且元素按顺时针顺序螺旋排列的 `n x n` 正方形矩阵 `matrix` 。
+
+ **示例 1：**
+
+![img](https://assets.leetcode.com/uploads/2020/11/13/spiraln.jpg)
+
+按层模拟
+
+可以将矩阵看成若干层，首先填入矩阵最外层的元素，其次填入矩阵次外层的元素，直到填入矩阵最内层的元素。
+
+定义矩阵的第 kk 层是到最近边界距离为 kk 的所有顶点。
+
+
+
+```js
+/**
+ * @param {number} n
+ * @return {number[][]}
+ */
+var generateMatrix = function(n) {
+    const matrix = new Array(n).fill(0).map(() => new Array(n).fill(0));
+
+    let left = 0, right = n - 1, top = 0, bottom = n - 1;
+    let num = 1;
+    while (left <= right && top <= bottom) {
+        for (let col = left; col <= right; col++) {
+            // 左到右
+            matrix[top][col] = num;
+            num++;
+        }
+        for (let row = top + 1; row <= bottom; row++) {
+            // 上到下
+            matrix[row][right] = num;
+            num++;
+        }
+        if (left < right && top < bottom) {
+            for (let col = right - 1; col > left; col--) {
+                // 右到左
+                matrix[bottom][col] = num;
+                num++;
+            }
+            for (let row = bottom; row > top; row--) {
+                // 下到上
+                matrix[row][left] = num;
+                num++;
+            }
+        }
+        left++;
+        right--;
+        top++;
+        bottom--;
+    }
+    return matrix;
+};
+
+let n = 4;
+let result = generateMatrix(n);
+console.log(result);
+```
+
+
+
+
+
+-----
+
 ## 66. 加一
 
 给定一个由 整数 组成的 非空 数组所表示的非负整数，在该数的基础上加一。
@@ -4610,7 +4752,11 @@ var merge = function(nums1, m, nums2, n) {
 ```
 
 
----
+
+----
+
+
+
 ## 89.格雷编码
 
 n 位格雷码序列 是一个由 2n 个整数组成的序列，其中：
@@ -4693,6 +4839,181 @@ let test=5;
 let result=grayCode(test);
 console.log(result);
 ```
+
+
+
+-----
+
+## 90. 子集 II
+
+给你一个整数数组 nums ，其中可能包含重复元素，请你返回该数组所有可能的子集（幂集）。
+
+解集 不能 包含重复的子集。返回的解集中，子集可以按 任意顺序 排列。
+
+
+
+**迭代法实现子集枚举**
+
+考虑数组 [1, 2, 2][1,2,2]，选择前两个数，或者第一、三个数，都会得到相同的子集。
+
+也就是说，对于当前选择的数 xx，若前面有与其相同的数 yy，且没有选择 yy，此时包含 xx 的子集，必然会出现在包含 yy 的所有子集中。
+
+我们可以通过判断这种情况，来避免生成重复的子集。代码实现时，可以先将数组排序；迭代时，若发现没有选择上一个数，且当前数字与上一个数相同，则可以跳过当前生成的子集。
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number[][]}
+ */
+var subsetsWithDup = function(nums) {
+    nums.sort((a, b) => a - b);
+    const ans = [];
+    let t = [];
+    const n = nums.length;
+
+    for (let mask = 0; mask < (1 << n); mask++) {
+        t = [];
+        let flag = true;
+        for (let i = 0; i < n; i++) {
+            if ((mask & (1 << i)) !== 0) {
+                if (i > 0 && (mask >> (i - 1) & 1) === 0 && nums[i] === nums[i - 1]) {
+                    flag = false;
+                    break;
+                }
+                t.push(nums[i]);
+            }
+        }
+        if (flag) {
+            ans.push(t.slice());
+        }
+    }
+    return ans;
+};
+```
+
+
+
+**递归法实现子集枚举**
+
+与方法一类似，在递归时，若发现没有选择上一个数，且当前数字与上一个数相同，则可以跳过当前生成的子集。
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number[][]}
+ */
+var subsetsWithDup = function(nums) {
+    nums.sort((a, b) => a - b);
+    const ans = [];
+    let t = [];
+    const n = nums.length;
+
+    const dfs = (pre, cur) => {
+        if (cur === n) {
+            ans.push(t.slice());
+            return;
+        }
+        dfs(false, cur + 1);
+        if (!pre && cur > 0 && nums[cur - 1] === nums[cur]) {
+            return;
+        }
+        
+        t.push(nums[cur]);
+        dfs(true, cur + 1);
+        t = t.slice(0, t.length - 1);
+    }
+    
+    dfs(false, 0);
+
+    return ans;
+};
+
+let nums = [1,2,2];
+let result = subsetsWithDup(nums);
+console.log(result);
+```
+
+
+
+
+
+
+
+-----
+
+## 91. 解码方法
+
+一条包含字母 A-Z 的消息通过以下映射进行了 编码 ：
+
+```
+'A' -> "1"
+'B' -> "2"
+...
+'Z' -> "26"
+```
+
+要 解码 已编码的消息，所有数字必须基于上述映射的方法，反向映射回字母（可能有多种方法）。例如，"11106" 可以映射为：
+
+"AAJF" ，将消息分组为 (1 1 10 6)
+"KJF" ，将消息分组为 (11 10 6)
+注意，消息不能分组为  (1 11 06) ，因为 "06" 不能映射为 "F" ，这是由于 "6" 和 "06" 在映射中并不等价。
+
+给你一个只含数字的 非空 字符串 s ，请计算并返回 解码 方法的 总数 。
+
+题目数据保证答案肯定是一个 32 位 的整数。
+
+动态规划
+
+
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var numDecodings = function(s) {
+    const n = s.length;
+    const dp = new Array(n + 1).fill(0);
+    dp[0] = 1;
+    for (let i = 1; i <= n; i++) {
+        if (s[i - 1] !== '0') {
+            // 只要 s[i] !== 0，它就可以被解码成 A∼I 中的某个字母
+            dp[i] += dp[i - 1];
+        }
+        if (i > 1 && s[i - 2] !== '0' && (Number(s.slice(i - 2, i) <= 26))) {
+            dp[i] += dp[i - 2];
+        }
+    }
+    return dp[n];
+};
+
+let s = "226";
+let result = numDecodings(s);
+console.log(result);
+```
+
+```js
+var numDecodings = function(s) {
+    const n = s.length;
+    // a = f[i-2], b = f[i-1], c = f[i]
+    let a = 0, b = 1, c = 0;
+    for (let i = 1; i <= n; ++i) {
+        c = 0;
+        if (s[i - 1] !== '0') {
+            c += b;
+        }
+        if (i > 1 && s[i - 2] != '0' && ((s[i - 2] - '0') * 10 + (s[i - 1] - '0') <= 26)) {
+            c += a;
+        }
+        a = b;
+        b = c;
+    }
+    return c;
+};
+
+```
+
+
 
 
 
