--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -5506,6 +5506,149 @@ var maxDepth = function(root) {
 
 
 ---
+## 105. 从前序与中序遍历序列构造二叉树
+
+给定两个整数数组 preorder 和 inorder ，其中 preorder 是二叉树的先序遍历， inorder 是同一棵树的中序遍历，请构造二叉树并返回其根节点。
+
+提示:
+
+1 <= preorder.length <= 3000
+inorder.length == preorder.length
+-3000 <= preorder[i], inorder[i] <= 3000
+preorder 和 inorder 均 无重复 元素
+inorder 均出现在 preorder
+preorder 保证 为二叉树的前序遍历序列
+inorder 保证 为二叉树的中序遍历序列
+
+**递归**
+
+对于任意一颗树而言，前序遍历的形式总是
+
+
+[ 根节点, [左子树的前序遍历结果], [右子树的前序遍历结果] ]
+即根节点总是前序遍历中的第一个节点。而中序遍历的形式总是
+
+
+[ [左子树的中序遍历结果], 根节点, [右子树的中序遍历结果] ]
+只要我们在中序遍历中定位到根节点，那么我们就可以分别知道左子树和右子树中的节点数目。由于同一颗子树的前序遍历和中序遍历的长度显然是相同的，因此我们就可以对应到前序遍历的结果中，对上述形式中的所有左右括号进行定位。
+
+这样以来，我们就知道了左子树的前序遍历和中序遍历结果，以及右子树的前序遍历和中序遍历结果，我们就可以递归地对构造出左子树和右子树，再将这两颗子树接到根节点的左右位置。
+
+在中序遍历中对根节点进行定位时，一种简单的方法是直接扫描整个中序遍历的结果并找出根节点，但这样做的时间复杂度较高。我们可以考虑使用哈希表来帮助我们快速地定位根节点。对于哈希映射中的每个键值对，键表示一个元素（节点的值），值表示其在中序遍历中的出现位置。在构造二叉树的过程之前，我们可以对中序遍历的列表进行一遍扫描，就可以构造出这个哈希映射。在此后构造二叉树的过程中，我们就只需要 O(1) 的时间对根节点进行定位了。
+
+
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {number[]} preorder
+ * @param {number[]} inorder
+ * @return {TreeNode}
+ */
+var buildTree = function(preorder, inorder) {
+    const n = preorder.length;
+    // 构造哈希映射，帮助我们快速定位根节点
+    const indexMap = new Map(inorder.map((item, index) => [item, index]));
+
+    const dfs = (preorder, inorder, preorder_left, preorder_right, inorder_left, inorder_right) => {
+        if (preorder_left > preorder_right) {
+            return null;
+        }
+        // 前序遍历中的第一个节点就是根节点
+        const preorder_root = preorder_left;
+        // 在中序遍历中定位根节点
+        const inorder_root = indexMap.get(preorder[preorder_root]);
+
+        // 先把根节点建立出来
+        const root = new TreeNode(preorder[preorder_root]);
+
+        // 得到左子树中的节点数目
+        const size_left_subtree = inorder_root - inorder_left;
+        // 递归地构造左子树，并连接到根节点
+        // 先序遍历中「从 左边界+1 开始的 size_left_subtree」个元素就对应了中序遍历中「从 左边界 开始到 根节点定位-1」的元素
+        root.left = dfs(preorder, inorder, preorder_left + 1, preorder_left + size_left_subtree, inorder_left, inorder_root - 1);
+
+        // 递归地构造右子树，并连接到根节点
+        // 先序遍历中「从 左边界+1+左子树节点数目 开始到 右边界」的元素就对应了中序遍历中「从 根节点定位+1 到 右边界」的元素
+        root.right = dfs(preorder, inorder, preorder_left + size_left_subtree + 1, preorder_right, inorder_root + 1, inorder_right);
+
+        return root;
+    };
+
+    return dfs(preorder, inorder, 0, n - 1, 0, n - 1);
+};
+
+let preorder = [3,9,20,15,7], inorder = [9,3,15,20,7];
+let result = buildTree(preorder, inorder);
+console.log(result);
+```
+
+
+
+----
+
+## 106. 从中序与后序遍历序列构造二叉树
+
+给定两个整数数组 inorder 和 postorder ，其中 inorder 是二叉树的中序遍历， postorder 是同一棵树的后序遍历，请你构造并返回这颗 二叉树 。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {number[]} preorder
+ * @param {number[]} inorder
+ * @return {TreeNode}
+ */
+var buildTree = function(inorder, postorder) {
+    let post_idx = postorder.length - 1;
+    const idx_map = new Map(inorder.map((v, i) => [v, i]));
+
+    const helper = (in_left, in_right) => {
+        // 如果这里没有节点构造二叉树了，就结束
+        if (in_left > in_right) {
+            return null;
+        }
+        // 选择 post_idx 位置的元素作为当前子树根节点
+        const root = new TreeNode(postorder[post_idx]);
+        // 根据 root 所在位置分成左右两棵子树
+        const index = idx_map.get(postorder[post_idx]);
+
+        // 下标减一
+        post_idx--;
+        // 构造右子树
+        root.right = helper(index + 1, in_right);
+        // 构造左子树
+        root.left = helper(in_left, index - 1);
+        return root;
+    }
+
+    return helper(0, inorder.length - 1);
+};
+
+let inorder = [9,3,15,20,7], postorder = [9,15,7,20,3];
+let result = buildTree(preorder, inorder);
+console.log(result);
+```
+
+
+
+
+
+-----
+
 ## 108. 将有序数组转换为二叉搜索树
 
 给你一个整数数组 nums ，其中元素已经按 升序 排列，请你将其转换为一棵 高度平衡 二叉搜索树。
@@ -6045,6 +6188,61 @@ console.log(result);
 
 
 ---
+## 134. 加油站
+
+在一条环路上有 n 个加油站，其中第 i 个加油站有汽油 gas[i] 升。
+
+你有一辆油箱容量无限的的汽车，从第 i 个加油站开往第 i+1 个加油站需要消耗汽油 cost[i] 升。你从其中的一个加油站出发，开始时油箱为空。
+
+给定两个整数数组 gas 和 cost ，如果你可以绕环路行驶一周，则返回出发时加油站的编号，否则返回 -1 。如果存在解，则 保证 它是 唯一 的。
+
+
+
+从头到尾遍历每个加油站，并检查以该加油站为起点，最终能否行驶一周。我们可以通过减小被检查的加油站数目，来降低总的时间复杂度。
+
+我们首先检查第 0 个加油站，并试图判断能否环绕一周；如果不能，就从第一个无法到达的加油站开始继续检查。
+
+```js
+/**
+ * @param {number[]} gas
+ * @param {number[]} cost
+ * @return {number}
+ */
+var canCompleteCircuit = function(gas, cost) {
+    const n = gas.length;
+    let i = 0;
+    while (i < n) {
+        let sumGas = 0, sumCost = 0;
+        let cnt = 0;
+        while (cnt < n) {
+            const j = (i + cnt) % n;
+            sumGas += gas[j];
+            sumCost += cost[j];
+            if (sumCost > sumGas) {
+                break;
+            }
+            cnt++;
+        }
+        if (cnt === n) {
+            return i;
+        } else {
+            i = i + cnt + 1;
+        }
+    }
+    return -1;
+};
+
+let gas = [1,2,3,4,5], cost = [3,4,5,1,2];
+let result = canCompleteCircuit(gas, cost);
+console.log(result);
+```
+
+
+
+
+
+----
+
 ## 136. 只出现一次的数字
 
 给定一个**非空**整数数组，除了某个元素只出现一次以外，其余每个元素均出现两次。找出那个只出现了一次的元素。
