--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -4506,6 +4506,84 @@ console.log(result);
 
 
 
+----
+
+## 73. 矩阵置零
+
+给定一个 `*m* x *n*` 的矩阵，如果一个元素为 **0** ，则将其所在行和列的所有元素都设为 **0** 。请使用 **[原地](http://baike.baidu.com/item/原地算法)** 算法**。**
+
+使用标记数组
+
+我们可以用两个标记数组分别记录每一行和每一列是否有零出现。
+
+具体地，我们首先遍历该数组一次，如果某个元素为 0，那么就将该元素所在的行和列所对应标记数组的位置置为 true。最后我们再次遍历该数组，用标记数组更新原数组即可。
+
+```js
+var setZeroes = function(matrix) {
+    const m = matrix.length, n = matrix[0].length;
+    const row = new Array(m).fill(false);
+    const col = new Array(n).fill(false);
+    for (let i = 0; i < m; i++) {
+        for (let j = 0; j < n; j++) {
+            if (matrix[i][j] === 0) {
+                row[i] = col[j] = true;
+            }
+        }
+    }
+    for (let i = 0; i < m; i++) {
+        for (let j = 0; j < n; j++) {
+            if (row[i] || col[j]) {
+                matrix[i][j] = 0;
+            }
+        }
+    }
+};
+
+```
+
+使用一个标记变量
+
+我们可以对方法二进一步优化，只使用一个标记变量记录第一列是否原本存在 0。这样，第一列的第一个元素即可以标记第一行是否出现 0。但为了防止每一列的第一个元素被提前更新，我们需要从最后一行开始，倒序地处理矩阵元素。
+
+```js
+/**
+ * @param {number[][]} matrix
+ * @return {void} Do not return anything, modify matrix in-place instead.
+ */
+var setZeroes = function(matrix) {
+    const m = matrix.length;
+    const n = matrix[0].length;
+    let flagCol0 = false;
+    for (let i = 0; i < m; i++) {
+        if (matrix[i][0] === 0) {
+            flagCol0 = true;
+        }
+        for (let j = 1; j < n; j++) {
+            if (matrix[i][j] === 0) {
+                matrix[i][0] = matrix[0][j] = 0;
+            }
+        }
+    }
+    for (let i = m - 1; i >= 0; i--) {
+        for (let j = 1; j < n; j++) {
+            if (matrix[i][0] === 0 || matrix[0][j] === 0) {
+                matrix[i][j] = 0;
+            }
+        }
+        if (flagCol0) {
+            matrix[i][0] = 0;
+        }
+    }
+    return matrix;
+};
+
+let matrix = [[1,1,1],[1,0,1],[1,1,1]];
+let result = setZeroes(matrix);
+console.log(result);
+```
+
+
+
 -----
 
 ## 82. 删除排序链表中的重复元素 II
