--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -1921,11 +1921,13 @@ while (T > 0) {
 
 
 
+
        更进一步的研究发现，exDNA在复制时可能产生复制错误，表现为相邻的两个碱基对交换位置，例如12345复制后可能得到13245。由于发生错误的可能性很低，可以认为一段exDNA在复制时至多只会发生一次复制错误。在至多产生一次复制错误的条件下，如果一段exDNA复制后得到的一定是正常exDNA，则称其为安全exDNA；如果复制后可能得到错误exDNA，则称其为不安全exDNA。
     
        例如12445，1，123123都是安全exDNA，2414183，1214，311都是不安全exDNA。
 
  
+
 
 
 
@@ -3315,4 +3317,96 @@ function solution(stones) {
 let stones = readline().trim().split(" ").map(Number);
 console.log(solution(stones));
 ```
+
+
+
+----
+
+## 9.22 信也科技笔试
+
+计算字符串中出现次数最多的字符
+
+```
+
+```
+
+
+
+复原 IP 地址
+
+回溯
+
+```js
+var restoreIpAddresses = function(s) {
+    const SEG_COUNT = 4;
+    const segments = new Array(SEG_COUNT);
+    const ans = [];
+
+    const dfs = (s, segId, segStart) => {
+        // 如果找到了 4 段 IP 地址并且遍历完了字符串，那么就是一种答案
+        if (segId === SEG_COUNT) {
+            if (segStart === s.length) {
+                ans.push(segments.join('.'));
+            }
+            return;
+        }
+
+        // 如果还没有找到 4 段 IP 地址就已经遍历完了字符串，那么提前回溯
+        if (segStart === s.length) {
+            return;
+        }
+
+        // 由于不能有前导零，如果当前数字为 0，那么这一段 IP 地址只能为 0
+        if (s.charAt(segStart) === '0') {
+            segments[segId] = 0;
+            dfs(s, segId + 1, segStart + 1);
+        }
+
+        // 一般情况，枚举每一种可能性并递归
+        let addr = 0;
+        for (let segEnd = segStart; segEnd < s.length; ++segEnd) {
+            addr = addr * 10 + (s.charAt(segEnd) - '0');
+            if (addr > 0 && addr <= 0xFF) {
+                segments[segId] = addr;
+                dfs(s, segId + 1, segEnd + 1);
+            } else {
+                break;
+            }
+        }
+    }
+
+    dfs(s, 0, 0);
+    return ans;
+};
+
+
+```
+
+
+
+css实现时钟
+
+
+
+---
+
+## 9.22 美的面试
+
+项目问题
+
+vue有哪些指令
+
+v-model与v-bind的区别
+
+js数据类型
+
+css3有哪些选择器
+
+语义化标签的优点
+
+js作用域，块级作用域原理
+
+
+
+----
 
