--- a/面试学习题目/前端面试_10_前端数据请求.md
+++ b/面试学习题目/前端面试_10_前端数据请求.md
@@ -29,7 +29,7 @@ Ajax的工作原理相当于在用户和服务器之间加了—个**中间层**
 
 Ajax其核心有JavaScript、XMLHTTPRequest、DOM对象组成，通过XmlHttpRequest对象来向服务器发异步请求，从服务器获得数据，然后用JavaScript来操作DOM而更新页面
 
-
+`Ajax`的原理简单来说通过`XmlHttpRequest`对象来向服务器发异步请求，从服务器获得数据，然后用`JavaScript`来操作`DOM`而更新页面
 
 ---
 
@@ -41,6 +41,80 @@ Ajax其核心有JavaScript、XMLHTTPRequest、DOM对象组成，通过XmlHttpReq
 4. 发送HTTP请求.
 5. 获取异步调用返回的数据.
 6. 使用JavaScript和DOM实现局部刷新.
+
+### 创建XMLHttpRequest对象
+
+通过`XMLHttpRequest()` 构造函数用于初始化一个 `XMLHttpRequest` 实例对象
+
+```js
+const xhr = new XMLHttpRequest();
+```
+
+### 与服务器建立连接
+
+通过 `XMLHttpRequest` 对象的 `open()` 方法与服务器建立连接
+
+```js
+xhr.open(method, url, [async][, user][, password])
+```
+
+参数说明：
+
+- `method`：表示当前的请求方式，常见的有`GET`、`POST`
+- `url`：服务端地址
+- `async`：布尔值，表示是否异步执行操作，默认为`true`
+- `user`: 可选的用户名用于认证用途；默认为`null
+- `password`: 可选的密码用于认证用途，默认为`null
+
+### 给服务端发送数据
+
+通过 `XMLHttpRequest` 对象的 `send()` 方法，将客户端页面的数据发送给服务端
+
+```js
+xhr.send([body])
+```
+
+```
+body`: 在 `XHR` 请求中要发送的数据体，如果不传递数据则为 `null
+```
+
+如果使用`GET`请求发送数据的时候，需要注意如下：
+
+- 将请求数据添加到`open()`方法中的`url`地址中
+- 发送请求数据中的`send()`方法中参数设置为`null`
+
+### 绑定onreadystatechange事件
+
+`onreadystatechange` 事件用于监听服务器端的通信状态，主要监听的属性为`XMLHttpRequest.readyState` ,
+
+关于`XMLHttpRequest.readyState`属性有五个状态，如下图显示
+
+
+
+![img](https://static.vue-js.com/9782fc90-7b31-11eb-ab90-d9ae814b240d.png)
+
+
+
+**只要 `readyState `属性值一变化，就会触发一次 `readystatechange` 事件**
+
+`XMLHttpRequest.responseText`属性用于接收服务器端的响应结果
+
+```js
+const request = new XMLHttpRequest()
+request.onreadystatechange = function(e){
+    if(request.readyState === 4){ // 整个请求过程完毕
+        if(request.status >= 200 && request.status <= 300){
+            console.log(request.responseText) // 服务端返回的结果
+        }else if(request.status >=400){
+            console.log("错误信息：" + request.status)
+        }
+    }
+}
+request.open('POST','http://xxxx')
+request.send()
+```
+
+
 
 ```html
 <button id="ajaxButton" type="button">Make a request</button>
@@ -168,6 +242,59 @@ module.exports = {
 };
 
 ```
+
+
+
+```js
+//封装一个ajax请求
+function ajax(options) {
+    //创建XMLHttpRequest对象
+    const xhr = new XMLHttpRequest()
+
+
+    //初始化参数的内容
+    options = options || {}
+    options.type = (options.type || 'GET').toUpperCase()
+    options.dataType = options.dataType || 'json'
+    const params = options.data
+
+    //发送请求
+    if (options.type === 'GET') {
+        xhr.open('GET', options.url + '?' + params, true)
+        xhr.send(null)
+    } else if (options.type === 'POST') {
+        xhr.open('POST', options.url, true)
+        xhr.send(params)
+
+    //接收请求
+    xhr.onreadystatechange = function () {
+        if (xhr.readyState === 4) {
+            let status = xhr.status
+            if (status >= 200 && status < 300) {
+                options.success && options.success(xhr.responseText, xhr.responseXML)
+            } else {
+                options.fail && options.fail(status)
+            }
+        }
+    }
+}
+    
+// 使用方式如下
+ajax({
+    type: 'post',
+    dataType: 'json',
+    data: {},
+    url: 'https://xxxx',
+    success: function(text,xml){//请求成功后的回调函数
+        console.log(text)
+    },
+    fail: function(status){////请求失败后的回调函数
+        console.log(status)
+    }
+})    
+```
+
+
 
 
 
