--- a/面试学习题目/前端面试_17_浏览器部分.md
+++ b/面试学习题目/前端面试_17_浏览器部分.md
@@ -1904,7 +1904,31 @@ HSTS是HTTPS协议的永久组成部分，并在 [RFC 6797](https://tools.ietf.o
 
 ## 谈谈indexDB
 
+`indexedDB `是一种低级API，用于客户端存储大量结构化数据(包括, 文件/ blobs)。该API使用索引来实现对该数据的高性能搜索
 
+虽然 `Web Storage `对于存储较少量的数据很有用，但对于存储更大量的结构化数据来说，这种方法不太有用。`IndexedDB`提供了一个解决方案
+
+优点：
+
+- 储存量理论上没有上限
+- 所有操作都是异步的，相比 `LocalStorage` 同步操作性能更高，尤其是数据量较大时
+- 原生支持储存`JS`的对象
+- 是个正经的数据库，意味着数据库能干的事它都能干
+
+缺点：
+
+- 操作非常繁琐
+- 本身有一定门槛
+
+关于`indexedDB`的使用基本使用步骤如下：
+
+- 打开数据库并且开始一个事务
+- 创建一个 `object store`
+- 构建一个请求来执行一些数据库操作，像增加或提取数据等。
+- 通过监听正确类型的 `DOM` 事件以等待操作完成。
+- 在操作结果上进行一些操作（可以在 `request `对象中找到）
+
+关于使用`indexdb`的使用会比较繁琐，大家可以通过使用`Godb.js`库进行缓存，最大化的降低操作难度
 
 
 
@@ -2757,4 +2781,441 @@ JavaScript的单线程，与它的用途有关。作为浏览器脚本语言，J
 
 
 ----
+
+## 说说对BOM的理解，常见的BOM对象有哪些？
+
+`BOM` (Browser Object Model)，浏览器对象模型，提供了独立于内容与浏览器窗口进行交互的对象
+
+其作用就是跟浏览器做一些交互效果,比如如何进行页面的后退，前进，刷新，浏览器的窗口发生变化，滚动条的滚动，以及获取客户的一些信息如：浏览器品牌版本，屏幕分辨率
+
+浏览器的全部内容可以看成`DOM`，整个浏览器可以看成`BOM`。区别如下：
+
+
+
+![img](E:\pogject\学习笔记\image\浏览器\482f33e0-8089-11eb-85f6-6fac77c0c9b3.png)
+
+
+
+### window
+
+`Bom`的核心对象是`window`，它表示浏览器的一个实例
+
+在浏览器中，`window`对象有双重角色，**即是浏览器窗口的一个接口，又是全局对象**
+
+因此所有在全局作用域中声明的变量、函数都会变成`window`对象的属性和方法
+
+```js
+var name = 'kop';
+function lookName(){
+  alert(this.name);
+}
+
+console.log(window.name);  //kop
+lookName();                //kop
+window.lookName();         //kop
+```
+
+关于窗口控制方法如下：
+
+- `moveBy(x,y)`：从当前位置水平移动窗体x个像素，垂直移动窗体y个像素，x为负数，将向左移动窗体，y为负数，将向上移动窗体
+- `moveTo(x,y)`：移动窗体左上角到相对于屏幕左上角的(x,y)点
+- `resizeBy(w,h)`：相对窗体当前的大小，宽度调整w个像素，高度调整h个像素。如果参数为负值，将缩小窗体，反之扩大窗体
+- `resizeTo(w,h)`：把窗体宽度调整为w个像素，高度调整为h个像素
+- `scrollTo(x,y)`：如果有滚动条，将横向滚动条移动到相对于窗体宽度为x个像素的位置，将纵向滚动条移动到相对于窗体高度为y个像素的位置
+- `scrollBy(x,y)`： 如果有滚动条，将横向滚动条向左移动x个像素，将纵向滚动条向下移动y个像素
+
+`window.open()` 既可以导航到一个特定的`url`，也可以打开一个新的浏览器窗口
+
+如果 `window.open()` 传递了第二个参数，且该参数是已有窗口或者框架的名称，那么就会在目标窗口加载第一个参数指定的URL
+
+```js
+window.open('htttp://www.vue3js.cn', 'topFrame')
+==> //< a href=" " target="topFrame"></ a>
+```
+
+`window.open()` 会返回新窗口的引用，也就是新窗口的 `window` 对象
+
+```js
+const myWin = window.open('http://www.vue3js.cn','myWin')
+```
+
+`window.close()` 仅用于通过 `window.open()` 打开的窗口
+
+新创建的 `window` 对象有一个 `opener` 属性，**该属性指向打开他的原始窗口对象**
+
+
+
+### location
+
+`url`地址如下：
+
+```js
+http://foouser:barpassword@www.wrox.com:80/WileyCDA/?q=javascript#contents
+```
+
+`location`属性描述如下：
+
+| 属性名   | 例子                                                     | 说明                                |
+| -------- | -------------------------------------------------------- | ----------------------------------- |
+| hash     | "#contents"                                              | utl中#后面的字符，没有则返回空串    |
+| host     | `[www.wrox.com:80]`                                      | 服务器名称和端口号                  |
+| hostname | `www.wrox.com`                                           | 域名，不带端口号                    |
+| href     | `http://www.wrox.com:80/WileyCDA/?q=javascript#contents` | 完整url                             |
+| pathname | "/WileyCDA/"                                             | 服务器下面的文件路径                |
+| port     | 80                                                       | url的端口号，没有则为空             |
+| protocol | http:                                                    | 使用的协议                          |
+| search   | ?q=javascript                                            | url的查询字符串，通常为？后面的内容 |
+
+除了 `hash `之外，**只要修改`location`的一个属性，就会导致页面重新加载新` URL`**
+
+`location.reload()`，此方法可以重新刷新当前页面。这个方法会根据最有效的方式刷新页面，如果页面自上一次请求以来没有改变过，页面就会从浏览器缓存中重新加载
+
+如果要强制从服务器中重新加载，传递一个参数`true`即可
+
+### navigator
+
+`navigator` 对象主要用来获取浏览器的属性，区分浏览器类型。属性较多，且兼容性比较复杂
+
+下表列出了`navigator`对象接口定义的属性和方法：
+
+
+
+![img](https://static.vue-js.com/6797ab40-8089-11eb-ab90-d9ae814b240d.png)
+
+
+
+
+
+![img](https://static.vue-js.com/74096620-8089-11eb-ab90-d9ae814b240d.png)
+
+
+
+### screen
+
+保存的纯粹是客户端能力信息，也就是浏览器窗口外面的客户端显示器的信息，比如像素宽度和像素高度
+
+
+
+![img](https://static.vue-js.com/7d6b21e0-8089-11eb-85f6-6fac77c0c9b3.png)
+
+
+
+
+
+### history
+
+`history`对象主要用来操作浏览器`URL`的历史记录，可以通过参数向前，向后，或者向指定`URL`跳转
+
+常用的属性如下：
+
+- `history.go()`
+
+接收一个整数数字或者字符串参数：向最近的一个记录中包含指定字符串的页面跳转，
+
+```js
+history.go('maixaofei.com')
+```
+
+当参数为整数数字的时候，正数表示向前跳转指定的页面，负数为向后跳转指定的页面
+
+```js
+history.go(3) //向前跳转三个记录
+history.go(-1) //向后跳转一个记录
+```
+
+- `history.forward()`：向前跳转一个页面
+- `history.back()`：向后跳转一个页面
+- `history.length`：获取历史记录数
+
+
+
+
+
+----
+
+## DOM常见的操作有哪些
+
+文档对象模型 (DOM) 是 `HTML` 和 `XML` 文档的编程接口
+
+它提供了对文档的结构化的表述，并定义了一种方式可以使从程序中对该结构进行访问，从而改变文档的结构，样式和内容
+
+任何 `HTML `或`XML`文档都可以用 `DOM `表示为一个由节点构成的层级结构
+
+节点分很多类型，每种类型对应着文档中不同的信息和（或）标记，也都有自己不同的特性、数据和方法，而且与其他类型有某种关系，如下所示：
+
+```html
+<html>
+    <head>
+        <title>Page</title>
+    </head>
+    <body>
+        <p>Hello World!</p >
+    </body>
+</html>
+```
+
+`DOM`像原子包含着亚原子微粒那样，也有很多类型的`DOM`节点包含着其他类型的节点。接下来我们先看看其中的三种：
+
+```html
+<div>
+    <p title="title">
+        content
+    </p >
+</div>
+```
+
+上述结构中，`div`、`p`就是元素节点，`content`就是文本节点，`title`就是属性节点
+
+
+
+日常前端开发，我们都离不开`DOM`操作
+
+在以前，我们使用`Jquery`，`zepto`等库来操作`DOM`，之后在`vue`，`Angular`，`React`等框架出现后，我们通过操作数据来控制`DOM`（绝大多数时候），越来越少的去直接操作`DOM`
+
+但这并不代表原生操作不重要。相反，`DOM`操作才能有助于我们理解框架深层的内容
+
+下面就来分析`DOM`常见的操作，主要分为：
+
+- 创建节点
+- 查询节点
+- 更新节点
+- 添加节点
+- 删除节点
+
+
+
+### 创建节点
+
+#### createElement
+
+创建新元素，接受一个参数，即要创建元素的标签名
+
+```js
+const divEl = document.createElement("div");
+```
+
+#### createTextNode
+
+创建一个文本节点
+
+```js
+const textEl = document.createTextNode("content");
+```
+
+#### createDocumentFragment
+
+用来创建一个文档碎片，它表示一种轻量级的文档，主要是用来存储临时节点，然后把文档碎片的内容一次性添加到`DOM`中
+
+```javascript
+const fragment = document.createDocumentFragment();
+```
+
+当请求把一个`DocumentFragment` 节点插入文档树时，插入的不是 `DocumentFragment `自身，而是它的所有子孙节点
+
+#### createAttribute
+
+创建属性节点，可以是自定义属性
+
+```js
+const dataAttribute = document.createAttribute('custom');
+consle.log(dataAttribute);
+```
+
+
+
+### 获取节点
+
+#### querySelector
+
+传入任何有效的` css` 选择器，即可选中单个 `DOM `元素（首个）：
+
+```js
+document.querySelector('.element')
+document.querySelector('#element')
+document.querySelector('div')
+document.querySelector('[name="username"]')
+document.querySelector('div + p > span')
+```
+
+如果页面上没有指定的元素时，返回 `null`
+
+#### querySelectorAll
+
+返回一个包含节点子树内所有与之相匹配的`Element`节点列表，如果没有相匹配的，则返回一个空节点列表
+
+```js
+const notLive = document.querySelectorAll("p");
+```
+
+需要注意的是，**该方法返回的是一个 `NodeList `的静态实例，它是一个静态的“快照”**，而非“实时”的查询
+
+关于获取`DOM`元素的方法还有如下，就不一一述说
+
+```js
+document.getElementById('id属性值');  //返回拥有指定id的对象的引用
+document.getElementsByClassName('class属性值');  //返回拥有指定class的对象集合
+document.getElementsByTagName('标签名');  //返回拥有指定标签名的对象集合
+document.getElementsByName('name属性值');   //返回拥有指定名称的对象结合
+document/element.querySelector('CSS选择器');    //仅返回第一个匹配的元素
+document/element.querySelectorAll('CSS选择器');   //  返回所有匹配的元素
+document.documentElement;    //获取页面中的HTML标签
+document.body;   //获取页面中的BODY标签
+document.all[''];   // 获取页面中的所有元素节点的对象集合型
+```
+
+除此之外，每个`DOM`元素还有`parentNode`、`childNodes`、`firstChild`、`lastChild`、`nextSibling`、`previousSibling`属性，关系图如下图所示
+
+
+
+![img](https://static.vue-js.com/c100f450-7fdc-11eb-ab90-d9ae814b240d.png)
+
+
+
+### 更新节点
+
+#### innerHTML
+
+不但可以修改一个`DOM`节点的文本内容，**还可以直接通过`HTML`片段修改`DOM`节点内部的子树**
+
+```js
+// 获取<p id="p">...</p >
+var p = document.getElementById('p');
+
+// 设置文本为abc:
+p.innerHTML = 'ABC'; // <p id="p">ABC</p >
+
+// 设置HTML:
+p.innerHTML = 'ABC <span style="color:red">RED</span> XYZ';
+// <p>...</p >的内部结构已修改
+```
+
+#### innerText、textContent
+
+自动对字符串进行`HTML`编码，保证无法设置任何`HTML`标签
+
+```js
+// 获取<p id="p-id">...</p >
+var p = document.getElementById('p-id');
+
+// 设置文本:
+p.innerText = '<script>alert("Hi")</script>';
+// HTML被自动编码，无法设置一个<script>节点:
+// <p id="p-id">&lt;script&gt;alert("Hi")&lt;/script&gt;</p >
+```
+
+两者的区别在于读取属性时，`innerText`不返回隐藏元素的文本，而`textContent`返回所有文本
+
+#### style
+
+`DOM`节点的`style`属性对应所有的`CSS`，可以直接获取或设置。遇到`-`需要转化为驼峰命名
+
+```js
+// 获取<p id="p-id">...</p >
+const p = document.getElementById('p-id');
+// 设置CSS:
+p.style.color = '#ff0000';
+p.style.fontSize = '20px'; // 驼峰命名
+p.style.paddingTop = '2em';
+```
+
+
+
+### 添加节点
+
+#### innerHTML
+
+如果这个DOM节点是空的，例如，`<div></div>`，那么，直接使用`innerHTML = '<span>child</span>'`就可以修改`DOM`节点的内容，相当于添加了新的`DOM`节点
+
+如果这个DOM节点不是空的，那就不能这么做，**因为`innerHTML`会直接替换掉原来的所有子节点**
+
+#### appendChild
+
+把一个子节点添加到父节点的最后一个子节点
+
+举个例子
+
+```html
+<!-- HTML结构 -->
+<p id="js">JavaScript</p >
+<div id="list">
+    <p id="java">Java</p >
+    <p id="python">Python</p >
+    <p id="scheme">Scheme</p >
+</div>
+```
+
+添加一个`p`元素
+
+```js
+const js = document.getElementById('js')
+js.innerHTML = "JavaScript"
+
+const list = document.getElementById('list');
+list.appendChild(js);
+```
+
+现在`HTML`结构变成了下面
+
+```html
+<!-- HTML结构 -->
+<div id="list">
+    <p id="java">Java</p >
+    <p id="python">Python</p >
+    <p id="scheme">Scheme</p >
+    <p id="js">JavaScript</p >  <!-- 添加元素 -->
+</div>
+```
+
+上述代码中，我们是获取`DOM`元素后再进行添加操作，**这个`js`节点是已经存在当前文档树中，因此这个节点首先会从原先的位置删除，再插入到新的位置**
+
+如果动态添加新的节点，则先创建一个新的节点，然后插入到指定的位置
+
+```js
+const list = document.getElementById('list'),
+const haskell = document.createElement('p');
+haskell.id = 'haskell';
+haskell.innerText = 'Haskell';
+list.appendChild(haskell);
+```
+
+#### insertBefore
+
+把子节点插入到指定的位置，使用方法如下：
+
+```js
+parentElement.insertBefore(newElement, referenceElement)
+```
+
+子节点会插入到`referenceElement`之前
+
+#### setAttribute
+
+在指定元素中添加一个属性节点，如果元素中已有该属性改变属性值
+
+```js
+const div = document.getElementById('id')
+div.setAttribute('class', 'white');//第一个参数属性名，第二个参数属性值。
+```
+
+
+
+### 删除节点
+
+删除一个节点，首先要获得该节点本身以及它的父节点，然后，调用父节点的`removeChild`把自己删掉
+
+```js
+// 拿到待删除节点:
+const self = document.getElementById('to-be-removed');
+// 拿到父节点:
+const parent = self.parentElement;
+// 删除:
+const removed = parent.removeChild(self);
+removed === self; // true
+```
+
+删除后的节点虽然不在文档树中了，**但其实它还在内存中，可以随时再次被添加到别的位置**
+
+
+
+-----
 
