--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -3437,7 +3437,6 @@ module.exports = {
  */
 var isBalanced = function(root) {
     return getHeight(root) >= 0;
-
 };
 
 const getHeight = (root) => {
@@ -3727,7 +3726,7 @@ const buildTreeCore = (preorder, inorder, preorder_left, preorder_right, inorder
     }
     // 前序遍历中的第一个节点就是根节点
     let preorder_root = preorder_left;
-    // 在中序遍历中定位根节点
+    // 在中序遍历中定位根节点, 可以使用hasmap来找
     let inorder_root = inorder.indexOf(preorder[preorder_root]);
     // 先把根节点建立出来
     let root = new TreeNode(preorder[preorder_root]);
@@ -3809,6 +3808,7 @@ var rightSideView = function(root) {
   dfs(root, 0, arr)
   return arr
 };
+
 function dfs (root, step, res) {
   if(root){
     if(res.length === step){
@@ -4010,8 +4010,7 @@ var isValid = function(s) {
                 return false;
             }
             stk.pop();
-        } 
-        else {
+        } else {
             stk.push(ch);
         }
     };
@@ -4208,7 +4207,7 @@ var getLeastNumbers = function(arr, k) {
 
 时间复杂度：O(nlogn)，其中 nn 是数组 arr 的长度。算法的时间复杂度即排序的时间复杂度。
 
-空间复杂度：O(logn)，排序所需额外的空间复杂度为 O(\log n)O(logn)。
+空间复杂度：O(logn)，排序所需额外的空间复杂度为 O(logn)。
 
 
 
@@ -4939,9 +4938,9 @@ var twoSum = function(nums,target){
 
 复杂度分析
 
-时间复杂度：O(N^2)O(N 2 )，其中 NN 是数组中的元素数量。最坏情况下数组中任意两个数都要被匹配一次。
+时间复杂度：O(N^2)，其中 N 是数组中的元素数量。最坏情况下数组中任意两个数都要被匹配一次。
 
-空间复杂度：O(1)O(1)。
+空间复杂度：O(1)。
 
 
 
@@ -4949,7 +4948,7 @@ var twoSum = function(nums,target){
 
 注意到方法一的时间复杂度较高的原因是寻找 target - x 的时间复杂度过高。因此，我们需要一种更优秀的方法，能够快速寻找数组中是否存在目标元素。如果存在，我们需要找出它的索引。
 
-使用哈希表，可以将寻找 target - x 的时间复杂度降低到从 O(N)O(N) 降低到 O(1)O(1)。
+使用哈希表，可以将寻找 target - x 的时间复杂度降低到从 O(N)) 降低到 O(1)。
 
 这样我们创建一个哈希表，对于每一个 x，我们首先查询哈希表中是否存在 target - x，然后将 x 插入到哈希表中，即可保证不会让 x 和自己匹配。
 
@@ -4976,9 +4975,9 @@ module.exports = {
 };
 ```
 
-时间复杂度：O(N)O(N)，其中 NN 是数组中的元素数量。对于每一个元素 x，我们可以 O(1)O(1) 地寻找 target - x。
+时间复杂度：O(N)，其中 N 是数组中的元素数量。对于每一个元素 x，我们可以 O(1) 地寻找 target - x。
 
-空间复杂度：O(N)O(N)，其中 NN 是数组中的元素数量。主要为哈希表的开销。
+空间复杂度：O(N)，其中 N 是数组中的元素数量。主要为哈希表的开销。
 
 
 
@@ -4991,8 +4990,7 @@ module.exports = {
 我们知道出现次数最多的元素大于Math.floor(n / 2)次，所以可以用哈希表来快速统计每个元素出现的次数。
 
 ```js
-function MoreThanHalfNum_Solution(numbers)
-{
+function MoreThanHalfNum_Solution(numbers) {
     // write code here
     let n = numbers.length;
     const m = new Map();
@@ -5015,7 +5013,7 @@ module.exports = {
 
 #### 排序
 
-如果将数组 nums 中的所有元素按照单调递增或单调递减的顺序排序，那么下标为Math.floor(n / 2) 的元素（下标从 0 开始）一定是众数。
+如果将数组 nums 中的所有元素按照单调递增或单调递减的顺序排序，**那么下标为Math.floor(n / 2) 的元素（下标从 0 开始）一定是众数。**
 
 ```js
 /**
@@ -5033,7 +5031,7 @@ var majorityElement = function(nums) {
 
 #### Boyer-Moore 投票算法
 
-如果我们把众数记为 +1+1，把其他数记为 -1−1，将它们全部加起来，显然和大于 `0`，从结果本身我们可以看出众数比其他数多。
+如果我们把众数记为 +1，把其他数记为 -1−1，将它们全部加起来，显然和大于 `0`，从结果本身我们可以看出众数比其他数多。
 
 Boyer-Moore 算法的本质和方法四中的分治十分类似。我们首先给出 Boyer-Moore 算法的详细步骤：
 
