--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -1922,11 +1922,13 @@ while (T > 0) {
 
 
 
+
        更进一步的研究发现，exDNA在复制时可能产生复制错误，表现为相邻的两个碱基对交换位置，例如12345复制后可能得到13245。由于发生错误的可能性很低，可以认为一段exDNA在复制时至多只会发生一次复制错误。在至多产生一次复制错误的条件下，如果一段exDNA复制后得到的一定是正常exDNA，则称其为安全exDNA；如果复制后可能得到错误exDNA，则称其为不安全exDNA。
     
        例如12445，1，123123都是安全exDNA，2414183，1214，311都是不安全exDNA。
 
  
+
 
 
 
@@ -3405,6 +3407,48 @@ css3有哪些选择器
 语义化标签的优点
 
 js作用域，块级作用域原理
+
+
+
+```js
+// 环形字符串的最长相同字符子串
+function solution(s) {
+    const n = s.length;
+    if (n < 2) {
+        return n;
+    }
+    let maxLen = 1;
+    let count = 1;
+    for (let i = 1; i < n; i++) {
+        if (s[i] === s[i - 1]) {
+            count++;
+        } else {
+            maxLen = Math.max(maxLen, count);
+            count = 1;
+        }
+    }
+    maxLen = Math.max(maxLen, count);
+
+    if (n === maxLen) {
+        return maxLen;
+    }
+
+    if (s[0] === s[n - 1]) {
+        count++;
+        let i = 1;
+        while (s[i] === s[i - 1]) {
+            i++;
+            count++;
+        }
+    }
+    maxLen = Math.max(maxLen, count);
+
+    return maxLen;
+}
+
+let s = 'abaaabaaaba';
+console.log(solution(s))
+```
 
 
 
