--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -21084,6 +21084,90 @@ console.log(result);
 
 
 
+----
+
+## 994. 腐烂的橘子
+
+在给定的 m x n 网格 grid 中，每个单元格可以有以下三个值之一：
+
+- 值 0 代表空单元格；
+
+- 值 1 代表新鲜橘子；
+- 值 2 代表腐烂的橘子。
+
+每分钟，腐烂的橘子 周围 4 个方向上相邻 的新鲜橘子都会腐烂。
+
+返回 直到单元格中没有新鲜橘子为止所必须经过的最小分钟数。如果不可能，返回 -1 。
+
+**提示：**
+
+- `m == grid.length`
+- `n == grid[i].length`
+- `1 <= m, n <= 10`
+- `grid[i][j]` 仅为 `0`、`1` 或 `2`
+
+多源广度优先搜索
+
+假设这些腐烂橘子刚开始是新鲜的，而有一个腐烂橘子(我们令其为超级源点)会在下一秒把这些橘子都变腐烂，而这个腐烂橘子刚开始在的时间是 -1−1 ，那么按照广度优先搜索的算法，下一分钟也就是第 00 分钟的时候，这个腐烂橘子会把它们都变成腐烂橘子，然后继续向外拓展，所以其实这些腐烂橘子是同一层的节点。那么在广度优先搜索的时候，我们将这些腐烂橘子都放进队列里进行广度优先搜索即可，最后每个新鲜橘子被腐烂的最短时间 dis[x][y]dis[x][y] 其实是以这个超级源点的腐烂橘子为起点的广度优先搜索得到的结果。
+
+为了确认是否所有新鲜橘子都被腐烂，可以记录一个变量 cntcnt 表示当前网格中的新鲜橘子数，广度优先搜索的时候如果有新鲜橘子被腐烂，则 cnt-=1 ，最后搜索结束时如果 cntcnt 大于 00 ，说明有新鲜橘子没被腐烂，返回 -1−1 ，否则返回所有新鲜橘子被腐烂的时间的最大值即可，也可以在广度优先搜索的过程中把已腐烂的新鲜橘子的值由 11 改为 22，最后看网格中是否由值为 11 即新鲜的橘子即可。
+
+
+
+```js
+/**
+ * @param {number[][]} grid
+ * @return {number}
+ */
+var orangesRotting = function(grid) {
+    const m = grid.length, n = grid[0].length;
+    const dirs = [[-1, 0], [1, 0], [0, -1], [0, 1]];
+    const queue = [];
+    const depth = new Map();
+
+    for (let i = 0; i < m; i++) {
+        for (let j = 0; j < n; j++) {
+            if (grid[i][j] === 2) {
+                const code = i * n + j;
+                queue.push(code);
+                depth.set(code, 0);
+            }
+        }
+    }
+
+    let ans = 0;
+    while (queue.length) {
+        const code = queue.shift();
+        let row = Math.floor(code / n), col = code % n;
+        for (let dir of dirs) {
+            const x = row + dir[0], y = col + dir[1];
+            if (x >= 0 && x < m && y >= 0 && y < n && grid[x][y] === 1) {
+                grid[x][y] = 2;
+                let newcode = x * n + y;
+                queue.push(newcode);
+                depth.set(newcode, depth.get(code) + 1);
+                ans = depth.get(newcode);
+            }
+        }
+    }
+    for (let i = 0; i < m; i++) {
+        for (let j = 0; j < n; j++) {
+            if (grid[i][j] === 1) {
+                return -1;
+            }
+        }
+    }
+    return ans;
+};
+
+let grid = [[2,1,1],[1,1,0],[0,1,1]];
+console.log(orangesRotting(grid));
+```
+
+
+
+
+
 
 ---
 ## 1001. 网格照明
