--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -1923,11 +1923,13 @@ while (T > 0) {
 
 
 
+
        更进一步的研究发现，exDNA在复制时可能产生复制错误，表现为相邻的两个碱基对交换位置，例如12345复制后可能得到13245。由于发生错误的可能性很低，可以认为一段exDNA在复制时至多只会发生一次复制错误。在至多产生一次复制错误的条件下，如果一段exDNA复制后得到的一定是正常exDNA，则称其为安全exDNA；如果复制后可能得到错误exDNA，则称其为不安全exDNA。
     
        例如12445，1，123123都是安全exDNA，2414183，1214，311都是不安全exDNA。
 
  
+
 
 
 
@@ -3453,4 +3455,16 @@ console.log(solution(s))
 
 
 ----
+
+## 9.30 完美世界面试
+
+项目问题
+
+快排算法
+
+给你一个单链表，随机选择链表的一个节点，并返回相应的节点值。每个节点 **被选中的概率一样** 。
+
+TCP与UDP区别
+
+http与https区别
 
