--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -10484,6 +10484,74 @@ RandomizedSet.prototype.getRandom = function() {
 
 
 
+----
+
+## 382. 链表随机节点
+
+给你一个单链表，随机选择链表的一个节点，并返回相应的节点值。每个节点 被选中的概率一样 。
+
+实现 Solution 类：
+
+- Solution(ListNode head) 使用整数数组初始化对象。
+
+- int getRandom() 从链表中随机选择一个节点并返回该节点的值。链表中所有节点被选中的概率相等。
+
+**记录所有链表元素**
+
+我们可以在初始化时，用一个数组记录链表中的所有元素，这样随机选择链表的一个节点，就变成在数组中随机选择一个元素。
+
+```js
+var Solution = function(head) {
+    this.list = [];
+    while (head != null) {
+        this.list.push(head.val);
+        head = head.next;
+    }
+};
+
+Solution.prototype.getRandom = function() {
+    return this.list[Math.floor(Math.random() * this.list.length)];
+};
+
+```
+
+**水塘抽样**
+
+方法一需要花费 O(n) 的空间存储链表中的所有元素，那么能否做到 O(1)的空间复杂度呢？
+
+我们可以设计如下算法：
+
+从链表头开始，遍历整个链表，对遍历到的第 i 个节点，随机选择区间 [0,i) 内的一个整数，如果其等于 0，则将答案置为该节点值，否则答案不变。
+
+该算法会保证每个节点的值成为最后被返回的值的概率均为 1/n ，证明如下：
+
+```
+P (第 i 个节点的值成为最后被返回的值)
+= P(第 i 次随机选择的值 = 0) x P(第 i+1 次随机选择的值 != 0) x ...x P(第 n 次随机选择的值 != 0)
+= 1/i x i/ i + 1) x ... x (n - 1)/n
+= 1/n
+```
+
+```js
+var Solution = function(head) {
+    this.head = head;
+};
+
+Solution.prototype.getRandom = function() {
+    let i = 1, ans = 0;
+    for (let node = this.head; node != null; node = node.next) {
+        if (Math.floor(Math.random() * i) === 0) { // 1/i 的概率选中（替换为答案）
+            ans = node.val;
+        }
+        ++i;
+    }
+    return ans;
+};
+
+```
+
+
+
 
 ---
 ## 383. 赎金信
