--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -17682,6 +17682,73 @@ var search = function(nums, target) {
 
 ----
 
+## 705. 设计哈希集合
+
+不使用任何内建的哈希表库设计一个哈希集合（HashSet）。
+
+实现 MyHashSet 类：
+
+- void add(key) 向哈希集合中插入值 key 。
+
+- bool contains(key) 返回哈希集合中是否存在这个值 key 。
+- void remove(key) 将给定值 key 从哈希集合中删除。如果哈希集合中没有这个值，什么也不做。
+
+```js
+var MyHashSet = function() {
+  this.arr = [];
+};
+
+/** 
+ * @param {number} key
+ * @return {void}
+ */
+MyHashSet.prototype.add = function(key) {
+  if (!this.contains(key)) {
+    this.arr.push(key);
+  }
+};
+
+/** 
+ * @param {number} key
+ * @return {void}
+ */
+MyHashSet.prototype.remove = function(key) {
+  for (let i = 0; i < this.arr.length; i++) {
+    if (this.arr[i] === key) {
+      this.arr.splice(i, 1);
+      break;
+    }
+  }
+};
+
+/** 
+ * @param {number} key
+ * @return {boolean}
+ */
+MyHashSet.prototype.contains = function(key) {
+  for (let i = 0; i < this.arr.length; i++) {
+    if (this.arr[i] === key) {
+      return true;
+    }
+  }
+  return false;
+};
+
+/**
+ * Your MyHashSet object will be instantiated and called as such:
+ * var obj = new MyHashSet()
+ * obj.add(key)
+ * obj.remove(key)
+ * var param_3 = obj.contains(key)
+ */
+```
+
+
+
+
+
+----
+
 ## 710. 黑名单中的随机数
 
 给定一个整数 n 和一个 无重复 黑名单整数数组 blacklist 。设计一种算法，从 [0, n - 1] 范围内的任意整数中选取一个 未加入 黑名单 blacklist 的整数。任何在上述范围内且不在黑名单 blacklist 中的整数都应该有 同等的可能性 被返回。
@@ -24208,6 +24275,59 @@ var sumOfUnique = function(nums) {
 
 
 ---
+## 1784. 检查二进制字符串字段
+
+给你一个二进制字符串 s ，该字符串 不含前导零 。
+
+如果 s 包含 零个或一个由连续的 '1' 组成的字段 ，返回 true 。否则，返回 false 。
+
+如果 s 中 由连续若干个 '1' 组成的字段 数量不超过 1，返回 true 。否则，返回 false 。
+
+
+
+```
+/**
+ * @param {string} s
+ * @return {boolean}
+ */
+var checkOnesSegment = function(s) {
+  if (s.length < 2) {
+    return true;
+  }
+  const m = new Map();
+  const n = s.length;
+  let maxLenOne = 1;
+  for (let i = 1; i < n; i++) {
+    if (s[i] === '0' && s[i - 1] === "1") {
+      const temp = s.slice(start, i);
+      m.set(temp, m.has(temp) ? m.get(temp) + 1 : 1);
+    } else {
+      if (s[i - 1] === '0') {
+        start = i;
+      }
+    }
+  }
+  if (s[n - 1] === '1') {
+    const temp = s.slice(start, n);
+    m.set(temp, m.has(temp) ? m.get(temp) + 1 : 1);
+  }
+  console.log(m)
+  for (let val of m.values()) {
+    if (val === 1) {
+      return true;
+    }
+  }
+  return false;
+};
+
+let s = "1001";
+console.log(checkOnesSegment(s));
+```
+
+
+
+----
+
 ## 1791. 找出星型图的中心节点
 
 有一个无向的 星型 图，由 n 个编号从 1 到 n 的节点组成。星型图有一个 中心 节点，并且恰有 n - 1 条边将中心节点与其他每个节点连接起来。
