--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -19891,6 +19891,63 @@ var binaryGap = function(n) {
 
 
 ---
+## 870. 优势洗牌
+
+给定两个大小相等的数组 nums1 和 nums2，nums1 相对于 nums2 的优势可以用满足 nums1[i] > nums2[i] 的索引 i 的数目来描述。
+
+返回 nums1 的任意排列，使其相对于 nums2 的优势最大化。
+
+提示：
+
+1 <= nums1.length <= 105
+nums2.length == nums1.length
+0 <= nums1[i], nums2[i] <= 109
+
+
+
+**排序后贪心**
+
+```js
+/**
+ * @param {number[]} nums1
+ * @param {number[]} nums2
+ * @return {number[]}
+ */
+var advantageCount = function(nums1, nums2) {
+  const n = nums1.length;
+    const idx1 = new Array(n).fill(0);
+    const idx2 = new Array(n).fill(0);
+    for (let i = 0; i < n; ++i) {
+        idx1[i] = i;
+        idx2[i] = i;
+    }
+    idx1.sort((i, j) => nums1[i] - nums1[j]);
+    idx2.sort((i, j) => nums2[i] - nums2[j]);
+
+    const ans = new Array(n).fill(0);
+    let left = 0, right = n - 1;
+    for (let i = 0; i < n; ++i) {
+        if (nums1[idx1[i]] > nums2[idx2[left]]) {
+            ans[idx2[left]] = nums1[idx1[i]];
+            ++left;
+        } else {
+            ans[idx2[right]] = nums1[idx1[i]];
+            --right;
+        }
+    }
+    return ans;
+}
+
+let nums1 = [2,7,11,15], nums2 = [1,10,4,11];
+console.log(advantageCount(nums1, nums2));
+```
+
+
+
+
+
+---
+
 ## 871. 最低加油次数
 
 汽车从起点出发驶向目的地，该目的地位于出发位置东面 target 英里处。
@@ -24370,6 +24427,44 @@ console.log(result);
 
 
 ---
+## 1800. 最大升序子数组和
+
+给你一个正整数组成的数组 nums ，返回 nums 中一个 升序 子数组的最大可能元素和。
+
+子数组是数组中的一个连续数字序列。
+
+已知子数组 [numsl, numsl+1, ..., numsr-1, numsr] ，若对所有 i（l <= i < r），numsi < numsi+1 都成立，则称这一子数组为 升序 子数组。注意，大小为 1 的子数组也视作 升序 子数组。
+
+
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var maxAscendingSum = function(nums) {
+  const n = nums.length;
+  let ans = nums[0], sum = nums[0];
+  for (let i = 1; i < n; i++) {
+    if (nums[i] <= nums[i - 1]) {
+      ans = Math.max(ans, sum);
+      sum = nums[i];
+    } else {
+      sum += nums[i];
+    }
+  }
+  ans = Math.max(ans, sum);
+  return ans;
+};
+
+let nums = [10,20,30,5,10,50];
+console.log(maxAscendingSum(nums));
+```
+
+
+
+----
+
 ## 1823. 找出游戏的获胜者
 
 共有 n 名小伙伴一起做游戏。小伙伴们围成一圈，按 顺时针顺序 从 1 到 n 编号。确切地说，从第 i 名小伙伴顺时针移动一位会到达第 (i+1) 名小伙伴的位置，其中 1 <= i < n ，从第 n 名小伙伴顺时针移动一位会回到第 1 名小伙伴的位置。
