--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -19772,9 +19772,92 @@ console.log(result);
 
 ----
 
+## 856. 括号的分数
 
+给定一个平衡括号字符串 S，按下述规则计算该字符串的分数：
 
+- () 得 1 分。
 
+- AB 得 A + B 分，其中 A 和 B 是平衡括号字符串。
+- (A) 得 2 * A 分，其中 A 是平衡括号字符串。
+
+**分治**
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var scoreOfParentheses = function(s) {
+  if (s.length === 2) {
+    return 1;
+  }
+  let bal = 0, n = s.length, len = 0;
+  for (let i = 0; i < n; i++) {
+    bal += (s[i] === '(' ? 1 : -1);
+    if (bal === 0) {
+      len = i + 1;
+      break;
+    }
+  }
+  if (len === n) {
+    return 2 * scoreOfParentheses(s.slice(1, n - 1));
+  } else {
+    return scoreOfParentheses(s.slice(0, len)) + scoreOfParentheses(s.slice(len));
+  }
+};
+
+let s = "(()(()))";
+console.log(scoreOfParentheses(s));
+```
+
+**栈**
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var scoreOfParentheses = function(s) {
+  const stack = [0];
+
+  for (let i = 0; i < s.length; i++) {
+    if (s[i] === '(') {
+      stack.push(0);
+    } else {
+      let v = stack.pop();
+      let top = stack.pop() + Math.max(2 * v, 1);
+      stack.push(top);
+    }
+  }
+  return stack[0];
+};
+
+let s = "(()(()))";
+console.log(scoreOfParentheses(s));
+```
+
+**计算最终分数和**
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var scoreOfParentheses = function(s) {
+  let bal = 0, n = s.length, ans = 0;
+  for (let i = 0; i < n; i++) {
+    bal += (s[i] === '(' ? 1 : -1);
+    if (s[i] === ')' && s[i - 1] === '(') {
+      ans += 1 << bal;
+    }
+  }
+  return ans;
+};
+
+let s = "(()(()))";
+console.log(scoreOfParentheses(s));
+```
 
 
 
