--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -18976,6 +18976,54 @@ var rotateString = function(s, goal) {
 
 
 ---
+## 801. 使序列递增的最小交换次数
+
+我们有两个长度相等且不为空的整型数组 nums1 和 nums2 。在一次操作中，我们可以交换 nums1[i] 和 nums2[i]的元素。
+
+例如，如果 nums1 = [1,2,3,8] ， nums2 =[5,6,7,4] ，你可以交换 i = 3 处的元素，得到 nums1 =[1,2,3,4] 和 nums2 =[5,6,7,8] 。
+返回 使 nums1 和 nums2 严格递增 所需操作的最小次数 。
+
+数组 arr 严格递增 且  arr[0] < arr[1] < arr[2] < ... < arr[arr.length - 1] 。
+
+注意：
+
+- 用例保证可以实现操作。
+
+**动态规划**
+
+```js
+/**
+ * @param {number[]} nums1
+ * @param {number[]} nums2
+ * @return {number}
+ */
+var minSwap = function(nums1, nums2) {
+  const n = nums1.length;
+  let a = 0, b = 1;
+  for (let i = 1; i < n; i++) {
+    let at = a, bt = b;
+    a = b = n;
+    if (nums1[i] > nums1[i - 1] && nums2[i] > nums2[i - 1]) {
+      a = Math.min(a, at);
+      b = Math.min(b, bt + 1);
+    }
+    if (nums1[i] > nums2[i - 1] && nums2[i] > nums1[i - 1]) {
+      a = Math.min(a, bt);
+      b = Math.min(b, at + 1);
+    }
+  }
+  return Math.min(a, b);
+};
+
+let nums1 = [1,3,5,4], nums2 = [1,2,3,7];
+console.log(minSwap(nums1, nums2));
+
+```
+
+
+
+----
+
 ## 804.唯一摩尔斯密码词
 
 国际摩尔斯密码定义一种标准编码方式，将每个字母对应于一个由一系列点和短线组成的字符串， 比如:
@@ -24463,6 +24511,50 @@ var checkOnesSegment = function(s) {
 let s = "1001";
 console.log(checkOnesSegment(s));
 ```
+
+
+
+----
+
+## 1790. 仅执行一次字符串交换能否使两个字符串相等
+
+给你长度相等的两个字符串 s1 和 s2 。一次 字符串交换 操作的步骤如下：选出某个字符串中的两个下标（不必不同），并交换这两个下标所对应的字符。
+
+如果对 其中一个字符串 执行 最多一次字符串交换 就可以使两个字符串相等，返回 true ；否则，返回 false 。
+
+```js
+/**
+ * @param {string} s1
+ * @param {string} s2
+ * @return {boolean}
+ */
+var areAlmostEqual = function(s1, s2) {
+  const n = s1.length;
+  const diff = [];
+  for (let i = 0; i < n; i++) {
+    if (s1[i] !== s2[i]) {
+      if (diff.length >= 2) {
+        return false;
+      }
+      diff.push(i)
+    }
+  }
+  if (diff.length === 0) {
+    return true;
+  }
+  if (diff.length !== 2) {
+    return false;
+  }
+
+  return s1[diff[0]] === s2[diff[1]] && s1[diff[1]] === s2[diff[0]];
+};
+
+let s1 = "attack", s2 = "defend";
+console.log(areAlmostEqual(s1, s2));
+
+```
+
+
 
 
 
