--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -18857,6 +18857,53 @@ const bitCount = (x) => {
 
 
 ---
+## 769. 最多能完成排序的块
+
+给定一个长度为 n 的整数数组 arr ，它表示在 [0, n - 1] 范围内的整数的排列。
+
+我们将 arr 分割成若干 块 (即分区)，并对每个块单独排序。将它们连接起来后，使得连接的结果和按升序排序后的原数组相同。
+
+返回数组能分成的最多块数量。
+
+**提示:**
+
+- `n == arr.length`
+- `1 <= n <= 10`
+- `0 <= arr[i] < n`
+- `arr` 中每个元素都 **不同**
+
+**贪心**
+
+因此我们只需要找到 `[a0, ai1], [a0, ai2], ..., [a0, an-1]`的最大数目，就能找到最大分割块数目。因为数组 arr 的元素在区间 `[0, n - 1]` 之间且互不相同，所以数组排序后有`arr[i]=i`。如果数组 arr 的某个长为 i+1 的前缀块`[a0, ai]` 的最大值等于i，那么说明它排序后与原数组排序后的结果一致。统计这些前缀块的数目，就可以得到最大分割块数目。
+
+
+
+
+```js
+/**
+ * @param {number[]} arr
+ * @return {number}
+ */
+var maxChunksToSorted = function(arr) {
+  const n = arr.length;
+  let ans = 0, maxValue = 0;
+  for (let i = 0; i < n; i++) {
+    maxValue = Math.max(maxValue, arr[i]);
+    if (maxValue === i) {
+      ans++;
+    }
+  }
+  return ans;
+};
+
+let arr = [1,0,2,3,4];
+console.log(maxChunksToSorted(arr));
+```
+
+
+
+----
+
 ## 780.到达终点
 
 给定四个整数 sx , sy ，tx 和 ty，如果通过一系列的转换可以从起点 (sx, sy) 到达终点 (tx, ty)，则返回 true，否则返回 false。
@@ -19261,6 +19308,57 @@ var pruneTree = function(root) {
     }
     return root;
 };
+```
+
+
+
+----
+
+## 817. 链表组件
+
+给定链表头结点 head，该链表上的每个结点都有一个 唯一的整型值 。同时给定列表 nums，该列表是上述链表中整型值的一个子集。
+
+返回列表 nums 中组件的个数，这里对组件的定义为：链表中一段最长连续结点的值（该值必须在列表 nums 中）构成的集合。
+
+**计算组件的起始位置**
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @param {number[]} nums
+ * @return {number}
+ */
+var numComponents = function(head, nums) {
+  const s = new Set(nums);
+  let ans = 0;
+  let p = head;
+  let flag = false;
+  while (p !== null) {
+    if (s.has(p.val)) {
+      if (!flag) {
+        flag = true
+      }
+    } else {
+      if (flag) {
+        ans++;
+        flag = false;
+      }
+    }
+    p = p.next;
+  }
+  if (flag) {
+    ans++;
+  }
+  return ans;
+};
+
 ```
 
 
