--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -20009,7 +20009,7 @@ console.log(scoreOfParentheses(s));
 
 
 ---
-## 883. 三维形体投影面积
+## 863. 三维形体投影面积
 
 在 n x n 的网格 grid 中，我们放置了一些与 x，y，z 三轴对齐的 1 x 1 x 1 立方体。
 
@@ -20349,6 +20349,65 @@ console.log(minEatingSpeed(piles, h));
 
 ---
 
+## 886. 可能的二分法
+
+给定一组 n 人（编号为 1, 2, ..., n）， 我们想把每个人分进任意大小的两组。每个人都可能不喜欢其他人，那么他们不应该属于同一组。
+
+给定整数 n 和数组 dislikes ，其中 dislikes[i] = [ai, bi] ，表示不允许将编号为 ai 和  bi的人归入同一组。当可以用这种方法将所有人分进两组时，返回 true；否则返回 false。
+
+我们可以尝试用「染色法」来解决问题：假设第一组中的人是红色，第二组中的人为蓝色。我们依次遍历每一个人，如果当前的人没有被分组，就将其分到第一组（即染为红色），那么这个人不喜欢的人必须分到第二组中（染为蓝色）。然后任何新被分到第二组中的人，其不喜欢的人必须被分到第一组，依此类推。如果在染色的过程中存在冲突，就表示这个任务是不可能完成的，否则说明染色的过程有效（即存在合法的分组方案）。
+
+
+
+```js
+/**
+ * @param {number} n
+ * @param {number[][]} dislikes
+ * @return {boolean}
+ */
+var possibleBipartition = function(n, dislikes) {
+  const dfs = (curnode, nowcolor, color, g) => {
+    color[curnode] = nowcolor;
+    for (const nextnode of g[curnode]) {
+      if (color[nextnode] !== 0 && color[nextnode] === color[curnode]) {
+        return false;
+      }
+      if (color[nextnode] === 0 && !dfs(nextnode, 3 ^ nowcolor, color, g)) {
+        return false;
+      }
+    }
+    return true;
+  }
+  
+  const color = new Array(n + 1).fill(0);
+  const g = new Array(n + 1).fill(0);
+  for (let i = 0; i <= n; i++) {
+    g[i] = [];
+  }
+  for (let p of dislikes) {
+    g[p[0]].push(p[1]);
+    g[p[1]].push(p[0]);
+  }
+  for (let i = 1; i <= n; i++) {
+    if (color[i] === 0 && !dfs(i, 1, color, g)) {
+      return false;
+    }
+  }
+  return true;
+};
+
+let n = 4, dislikes = [[1,2],[1,3],[2,4]];
+console.log(possibleBipartition(n, dislikes));
+```
+
+
+
+
+
+
+
+----
+
 ## 890. 查找和替换模式
 
 你有一个单词列表 words 和一个模式  pattern，你想知道 words 中的哪些单词与模式匹配。
@@ -20423,6 +20482,103 @@ var orderlyQueue = function(s, k) {
 
 let s =  "baaca", k = 3;
 console.log(orderlyQueue(s, k));
+```
+
+
+
+----
+
+## 902. 最大为 N 的数字组合
+
+给定一个按 非递减顺序 排列的数字数组 digits 。你可以用任意次数 digits[i] 来写的数字。例如，如果 digits = ['1','3','5']，我们可以写数字，如 '13', '551', 和 '1351315'。
+
+返回 可以生成的小于或等于给定整数 n 的正整数的个数 。
+
+ 数位动态规划
+
+```js
+/**
+ * @param {string[]} digits
+ * @param {number} n
+ * @return {number}
+ */
+var atMostNGivenDigitSet = function(digits, n) {
+  const s = '' + n;
+  const m = digits.length, k = s.length;
+  const dp = new Array(k + 1).fill(0).map(() => new Array(2).fill(0));
+  dp[0][1] = 1;
+  for (let i = 1; i <= k; i++) {
+    for (let j = 0; j < m; j++) {
+      if (digits[j][0] === s[i - 1]) {
+        dp[i][1] = dp[i - 1][1];
+      } else if (digits[j][0] < s[i - 1]) {
+        dp[i][0] += dp[i - 1][1];
+      } else {
+        break;
+      }
+    }
+    if (i > 1) {
+      dp[i][0] += m + dp[i - 1][0] * m;
+    }
+  }
+  return dp[k][0] + dp[k][1];
+};
+
+let digits = ["1","4","9"], n = 1000000000;
+console.log(atMostNGivenDigitSet(digits, n));
+```
+
+
+
+----
+
+## 904. 水果成篮
+
+你正在探访一家农场，农场从左到右种植了一排果树。这些树用一个整数数组 fruits 表示，其中 fruits[i] 是第 i 棵树上的水果 种类 。
+
+你想要尽可能多地收集水果。然而，农场的主人设定了一些严格的规矩，你必须按照要求采摘水果：
+
+你只有 两个 篮子，并且每个篮子只能装 单一类型 的水果。每个篮子能够装的水果总量没有限制。
+你可以选择任意一棵树开始采摘，你必须从 每棵 树（包括开始采摘的树）上 恰好摘一个水果 。采摘的水果应当符合篮子中的水果类型。每采摘一次，你将会向右移动到下一棵树，并继续采摘。
+一旦你走到某棵树前，但水果不符合篮子的水果类型，那么就必须停止采摘。
+给你一个整数数组 fruits ，返回你可以收集的水果的 最大 数目。
+
+**滑动窗口**
+
+我们可以使用滑动窗口解决本题，left 和 right 分别表示满足要求的窗口的左右边界，同时我们使用哈希表存储这个窗口内的数以及出现的次数。
+
+我们每次将 right 移动一个位置，并将fruits[right] 加入哈希表。如果此时哈希表不满足要求（即哈希表中出现超过两个键值对），那么我们需要不断移动 left，并将fruits[left] 从哈希表中移除，直到哈希表满足要求为止。
+
+需要注意的是，将fruits[left] 从哈希表中移除后，如果fruits[left] 在哈希表中的出现次数减少为 0，需要将对应的键值对从哈希表中移除。
+
+
+
+```js
+/**
+ * @param {number[]} fruits
+ * @return {number}
+ */
+var totalFruit = function(fruits) {
+  const n = fruits.length;
+  const baskets = new Map();
+
+  let left = 0, ans = 0;
+  for (let right = 0; right < n; right++) {
+    baskets.set(fruits[right], (baskets.get(fruits[right]) || 0) + 1);
+    while (baskets.size > 2) {
+      baskets.set(fruits[left], baskets.get(fruits[left]) - 1);
+      if (baskets.get(fruits[left]) === 0) {
+        baskets.delete(fruits[left]);
+      }
+      left++;
+    }
+    ans = Math.max(ans, right - left + 1);
+  }
+  return ans;
+};
+
+let fruits = [1,2,3,2,2];
+console.log(totalFruit(fruits));
 ```
 
 
@@ -21052,6 +21208,55 @@ console.log(result);
 
 
 ---
+## 940. 不同的子序列 II
+
+给定一个字符串 s，计算 s 的 不同非空子序列 的个数。因为结果可能很大，所以返回答案需要对 10^9 + 7 取余 。
+
+字符串的 子序列 是经由原字符串删除一些（也可能不删除）字符但不改变剩余字符相对位置的一个新字符串。
+
+例如，"ace" 是 "abcde" 的一个子序列，但 "aec" 不是。
+
+**动态规划**
+
+
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var distinctSubseqII = function(s) {
+  const MOD = 1000000007;
+  const last = new Array(26).fill(-1);
+  const codeA = 'a'.charCodeAt();
+  const n = s.length;
+  const dp = new Array(n).fill(1);
+  for (let i = 0; i < n; i++) {
+    for (let j = 0; j < 26; j++) {
+      if (last[j] !== -1) {
+        dp[i] = (dp[i] + dp[last[j]]) % MOD;
+      }
+    }
+    last[s[i].charCodeAt() - codeA] = i;
+  }
+  let ans = 0;
+  for (let i = 0; i < 26; i++) {
+    if (last[i] !== -1) {
+      ans = (ans + dp[last[i]]) % MOD;
+    }
+  }
+
+  return ans;
+};
+
+let s = "abc";
+console.log(distinctSubseqII(s));
+```
+
+
+
+---
+
 ## 942.增减字符串匹配
 
 由范围 [0,n] 内所有整数组成的 n + 1 个整数的排列序列可以表示为长度为 n 的字符串 s ，其中:
@@ -23482,6 +23687,53 @@ var maxScore = function(s) {
     return ans;
 };
 
+```
+
+
+
+----
+
+## 1441. 用栈操作构建数组
+
+给你一个数组 target 和一个整数 n。每次迭代，需要从  list = { 1 , 2 , 3 ..., n } 中依次读取一个数字。
+
+请使用下述操作来构建目标数组 target ：
+
+"Push"：从 list 中读取一个新元素， 并将其推入数组中。
+"Pop"：删除数组中的最后一个元素。
+如果目标数组构建完成，就停止读取更多元素。
+题目数据保证目标数组严格递增，并且只包含 1 到 n 之间的数字。
+
+请返回构建目标数组所用的操作序列。如果存在多个可行方案，返回任一即可。
+
+ 
+
+```js
+/**
+ * @param {number[]} target
+ * @param {number} n
+ * @return {string[]}
+ */
+var buildArray = function(target, n) {
+  let ans = [];
+  const m = target.length;
+  let j = 0;
+  for (let i = 1; i <= n; i++) {
+    ans.push("Push");
+    if (target[j] === i) {
+      j++;
+    } else {
+      ans.push("Pop");
+    }
+    if (j === m) {
+      break;
+    }
+  }
+  return ans;
+};
+
+let target = [1,3, 5], n = 7;
+console.log(buildArray(target, n));
 ```
 
 
