--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -18902,6 +18902,85 @@ console.log(maxChunksToSorted(arr));
 
 
 
+---
+
+## 779. 第K个语法符号
+
+我们构建了一个包含 n 行( 索引从 1  开始 )的表。首先在第一行我们写上一个 0。接下来的每一行，将前一行中的0替换为01，1替换为10。
+
+例如，对于 n = 3 ，第 1 行是 0 ，第 2 行是 01 ，第3行是 0110 。
+给定行数 n 和序数 k，返回第 n 行中第 k 个字符。（ k 从索引 1 开始）
+
+**提示:**
+
+- `1 <= n <= 30`
+- `1 <= k <= 2n - 1`
+
+**递归**
+
+```js
+/**
+ * @param {number} n
+ * @param {number} k
+ * @return {number}
+ */
+var kthGrammar = function(n, k) {
+  if (n === 1) {
+    return 0;
+  }
+  return (k & 1) ^ 1 ^ kthGrammar(n - 1, (k + 1) / 2);
+};
+
+let n = 2, k = 2;
+console.log(kthGrammar(n, k));
+```
+
+**找规律 + 递归**
+
+```js
+/**
+ * @param {number} n
+ * @param {number} k
+ * @return {number}
+ */
+var kthGrammar = function(n, k) {
+  if (k === 1) {
+    return 0;
+  }
+   if (k > (1 << (n - 2))) {
+        return 1 ^ kthGrammar(n - 1, k - (1 << (n - 2)));
+    }
+    return kthGrammar(n - 1, k);
+};
+
+let n = 2, k = 2;
+console.log(kthGrammar(n, k));
+```
+
+**找规律 + 位运算**
+
+```js
+/**
+ * @param {number} n
+ * @param {number} k
+ * @return {number}
+ */
+var kthGrammar = function(n, k) {
+  k--;
+  let ans = 0;
+  while (k > 0) {
+    k &= k - 1;
+    ans ^= 1;
+  }
+  return ans;
+};
+
+let n = 2, k = 2;
+console.log(kthGrammar(n, k));
+```
+
+
+
 ----
 
 ## 780.到达终点
@@ -20482,6 +20561,48 @@ var orderlyQueue = function(s, k) {
 
 let s =  "baaca", k = 3;
 console.log(orderlyQueue(s, k));
+```
+
+
+
+----
+
+## 901. 股票价格跨度
+
+编写一个 StockSpanner 类，它收集某些股票的每日报价，并返回该股票当日价格的跨度。
+
+今天股票价格的跨度被定义为股票价格小于或等于今天价格的最大连续日数（从今天开始往回数，包括今天）。
+
+例如，如果未来7天股票的价格是 [100, 80, 60, 70, 60, 75, 85]，那么股票跨度将是 [1, 1, 1, 2, 1, 4, 6]。
+
+ **单调栈**
+
+```js
+var StockSpanner = function() {
+  this.stack = [];
+  this.stack.push([-1, Number.MAX_VALUE]);
+  this.idx = -1;
+};
+
+/** 
+ * @param {number} price
+ * @return {number}
+ */
+StockSpanner.prototype.next = function(price) {
+  this.idx++;
+  while (price >= this.stack[this.stack.length - 1][1]) {
+    this.stack.pop();
+  }
+  let ans = this.idx - this.stack[this.stack.length - 1][0];
+  this.stack.push([this.idx, price]);
+  return ans;
+};
+
+/**
+ * Your StockSpanner object will be instantiated and called as such:
+ * var obj = new StockSpanner()
+ * var param_1 = obj.next(price)
+ */
 ```
 
 
